--- a/src/guide/关于酒馆助手/介绍.md
+++ b/src/guide/关于酒馆助手/介绍.md
@@ -1,35 +1,36 @@
-# 酒馆助手 (Tavern-Helper)
+# 酒馆助手 (Tavern Helper)
 
 ## 简介
 
-酒馆助手是一个为 SillyTavern 设计的多功能扩展。它不仅能在对话中渲染交互式的前端界面，还能实现与 SillyTavern 本身的深度交互，以及作为中间层连接 SillyTavern 与外部应用程序。通过这个扩展，你可以：
+酒馆助手是一个为 SillyTavern 设计的多功能扩展. 它不仅能在对话中渲染交互式的前端界面, 还能实现与 SillyTavern 本身的深度交互, 以及作为中间层连接 SillyTavern 与外部应用程序. 通过这个扩展, 你可以:
 
-- 在对话中创建从简单按钮到复杂游戏界面的各种交互元素
-- 使用 jQuery 操作 SillyTavern 的DOM元素，如修改样式、绑定事件等
-- 将 SillyTavern 作为后端，与外部应用程序进行数据交换和功能联动
+- 🖥️ **为角色卡提供更好的 UI 显示**: 如将消息楼层中原本只是代码块纯文本的状态栏美化为有动态效果、有交互的 html 状态栏
+- 🎮 **实现非纯文本的游玩体验**: 如监听现实时间或酒馆事件来实现 meta 游戏、播放多媒体文件、自制游玩界面并与酒馆交互
+- 🔧 **优化酒馆使用体验**: 如用 jQuery 为预设提示词条目新增复制按钮, 监听酒馆接收到消息事件并判断是否需要重新生成本楼层消息
+- 🔌 **连接外部应用程序**: 如通过 socket.io-client 连接外部服务器, 进而实现外部应用程序与酒馆的通信
+- 🎁 **新增额外功能**: 如每 20 楼在后台调用一次 LLM 来生成对之前剧情的总结
+- ...
 
 ## 指引
 
-根据你的需求，可以查看以下内容：
+根据你的需求, 可以查看以下内容:
 
 - 💾 [安装与更新](./安装与更新) - 如何安装和配置酒馆助手
 - 📖 [基本用法](../基本用法/渲染器) - 学习酒馆助手在 SillyTavern 中的基本用法
-- 🔍 [功能详情](../功能详情/触发快速回复命令) - 作为角色卡编写者/开发者，深入了解所有可用功能
-- ❓ [常见问题解答](./常见问题/安装与更新问题) - 作为角色卡游玩者，解决使用中遇到的问题
+- 🔍 [功能详情](../功能详情/触发快速回复命令) - 作为角色卡编写者/开发者, 深入了解所有可用功能
+- ❓ [常见问题解答](./常见问题/安装与更新问题) - 作为角色卡游玩者, 解决使用中遇到的问题
 
-:::warning
+## 安全风险
 
-酒馆助手允许执行自定义JavaScript代码，这可能会带来安全风险：
+酒馆助手允许执行自定义 JavaScript 代码, 这可能会带来安全风险:
 
-- 恶意脚本可能会窃取你的 API 密钥、聊天记录等敏感信息；修改或破坏你的 SillyTavern 设置
-- 某些脚本可能会执行危险操作，如发送未经授权的请求
+- 恶意脚本可能会窃取你的 API 密钥、聊天记录等敏感信息; 修改或破坏你的 SillyTavern 设置
+- 某些脚本可能会执行危险操作, 如发送未经授权的请求
 
-请在执行任何脚本前：
+请在执行任何脚本前:
 
-1. 仔细检查脚本内容，确保其来源可信
+1. 仔细检查脚本内容, 确保其来源可信
 2. 理解脚本的功能和可能的影响
-3. 如有疑问，请勿执行来源不明的脚本
+3. 如有疑问, 请勿执行来源不明的脚本
 
-我们不为第三方脚本造成的任何损失负责。
-
-:::
+我们不为第三方脚本造成的任何损失负责
