--- a/src/guide/关于酒馆助手/安装与更新.md
+++ b/src/guide/关于酒馆助手/安装与更新.md
@@ -6,21 +6,25 @@ order: 0
 
 ## 安装方法
 
+:::tip 安装失败了？
+
 安装中遇到问题请看[安装与更新问题](./常见问题/安装与更新问题.md)
 
-### SillyTavern在线安装
+:::
 
-点击SillyTavern顶部的扩展图标，选择安装扩展，在弹出框内**二选一**任选一个链接填入：
+### 在线安装
 
-- <https://gitlab.com/novi028/JS-Slash-Runner> (不需要国外网络环境)
-- <https://github.com/N0VI028/JS-Slash-Runner> (需要国外网络环境)
+点击 SillyTavern 顶部的扩展图标, 选择安装扩展, 在弹出框内**二选一**任选一个链接填入:
 
-然后点击保存即可。
+- <https://gitlab.com/novi028/JS-Slash-Runner> (推荐, 不需要国外网络环境)
+- <https://github.com/n0vi028/JS-Slash-Runner> (需要国外网络环境)
 
-**图片示意：**
-![安装方法](/安装方法.jpg)
+然后点击保存即可.
 
-**视频演示：**
+**图片示意:**
+![安装方法](/安装方法.png)
+
+**视频演示:**
 
 <video src="https://gitgud.io/StageDog/tavern_resource/-/raw/main/src/酒馆助手/安装方法.mp4" type="video/mp4" controls />
 
@@ -28,33 +32,32 @@ order: 0
 
 1. 确保为国外网络环境
 2. 访问 [N0VI028/JS-Slash-Runner](https://github.com/N0VI028/JS-Slash-Runner)
-3. 点击页面右上角绿色按钮 `Code` ，选择 `Download ZIP` 下载压缩包
+3. 点击页面右上角绿色按钮 `Code`, 选择 `Download ZIP` 下载压缩包
 4. 解压并重命名为 `JS-Slash-Runner`
-5. 移动到相应的扩展目录。
+5. 移动到相应的扩展目录
 
-- 如果想要为酒馆所有用户安装， 移动到`SillyTavern/public/scripts/extensions/third-party` 目录
-- 如果想为指定用户安装， 移动到`SillyTavern/data/default-user/extensions` 目录 (酒馆多用户使用者请将 default-user 替换为实际用户名)
+- 如果想要为酒馆所有用户安装, 移动到 `SillyTavern/public/scripts/extensions/third-party` 目录
+- 如果想为指定用户安装, 移动到 `SillyTavern/data/default-user/extensions` 目录 (酒馆多用户使用者请将 `default-user` 替换为实际用户名)
 
 :::warning
-
-- 酒馆助手要求 SillyTavern 版本在 1.12.10 及其以上才能使用。
-- 手动安装的扩展无法自动检查更新
-
+手动安装的扩展无法在 SillyTavern 内一键更新, 需要手动删除并重新安装.
 :::
 
 ## 更新方法
 
+:::tip 更新失败了？
 更新中遇到问题请看[安装与更新问题](./常见问题/安装与更新问题.md)
+:::
 
-### SillyTavern扩展管理器更新
+### 扩展自带的更新按钮
 
-点击SillyTavern顶部的扩展图标，选择管理扩展，在弹出框的最下方，若有新版本更新，名称会显示绿色，并显示更新按钮。
+点击 "扩展界面-主设置" 中的 "更新" 按钮即可更新
 
-<img src="/更新方法1.jpg" width="50%" alt="更新方法1">
+<img src="/扩展内更新.png" width="50%" alt="扩展内更新">
+
+### SillyTavern 内更新
+
+点击 SillyTavern 顶部的扩展图标, 然后点击 "管理扩展". 此时将会弹出一个界面, 查看弹出界面下方, 若扩展有版本更新, 则其名称会显示为绿色, 并额外有一个更新按钮.
+
+<img src="/更新方法1.png" width="50%" alt="更新方法1">
 <img src="/更新方法2.jpg" width="50%" alt="更新方法2">
-
-### 扩展内更新
-
-点击“扩展界面-主设置”中的“更新”按钮更新。
-
-<img src="/扩展内更新.jpg" width="50%" alt="扩展内更新">
