--- a/src/guide/功能详情/导入酒馆数据.md
+++ b/src/guide/功能详情/导入酒馆数据.md
@@ -4,36 +4,181 @@
 请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
 :::
 
-[点击查看对应类型定义文件（可发给AI或IDE使用，酒馆助手设置中提供了打包下载）](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/import_raw.d.ts)
+[点击查看对应类型定义文件 (可发给 AI 或 IDE 使用, 酒馆助手界面中提供了打包下载)](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/import_raw.d.ts)
+
+<CustomTOC />
 
 ## importRawCharacter
 
 像酒馆界面里那样导入角色卡
 
-```typescript
+:::code-group
+
+```ts [importRawCharacter]
 function importRawCharacter(filename: string, content: Blob): Promise<Response>;
 ```
+
+:::
+
+### 参数
+
+#### `filename`
+
+- **类型**: `string`
+- **描述**: 角色卡名
+
+#### `content`
+
+- **类型**: `Blob`
+- **描述**: 角色卡文件内容
+
+### 示例
+
+:::code-group
+
+```ts [从网络链接导入角色卡]
+const response = await fetch(角色卡网络链接);
+await importRawCharacter(角色卡名, await response.blob());
+```
+
+:::
+
+## importRawChat
+
+像酒馆界面里那样导入聊天文件, 目前仅能导入到当前选择的角色卡
+
+:::code-group
+
+```ts [importRawChat]
+function importRawChat(filename: string, content: string): Promise<Response>;
+```
+
+:::
+
+### 参数
+
+#### `filename`
+
+- **类型**: `string`
+- **描述**: 聊天文件名, 由于酒馆限制, 它实际不会作为最终导入的聊天文件名称
+
+#### `content`
+
+- **类型**: `string`
+- **描述**: 聊天文件内容
+
+### 示例
+
+:::code-group
+
+```ts [从网络链接导入聊天文件]
+const response = await fetch(聊天文件网络链接);
+await importRawChat(聊天文件名, await response.text());
+```
+
+:::
 
 ## importRawPreset
 
 像酒馆界面里那样导入预设
 
-```typescript
+:::code-group
+
+```ts [importRawPreset]
 function importRawPreset(filename: string, content: string): Promise<Response>;
 ```
+
+:::
+
+### 参数
+
+#### `filename`
+
+- **类型**: `string`
+- **描述**: 预设文件名
+
+#### `content`
+
+- **类型**: `string`
+- **描述**: 预设文件内容
+
+### 示例
+
+:::code-group
+
+```ts [importRawPreset]
+const response = await fetch(预设网络链接);
+await importRawPreset(预设名, await response.text());
+```
+
+:::
 
 ## importRawWorldbook
 
 像酒馆界面里那样导入世界书
 
-```typescript
+:::code-group
+
+```ts [importRawWorldbook]
 function importRawWorldbook(filename: string, content: string): Promise<Response>;
 ```
+
+:::
+
+### 参数
+
+#### `filename`
+
+- **类型**: `string`
+- **描述**: 世界书文件名
+
+#### `content`
+
+- **类型**: `string`
+- **描述**: 世界书文件内容
+
+### 示例
+
+:::code-group
+
+```ts [importRawWorldbook]
+const response = await fetch(世界书网络链接);
+await importRawWorldbook(世界书名, await response.text());
+```
+
+:::
 
 ## importRawTavernRegex
 
 像酒馆界面里那样导入酒馆正则
 
-```typescript
+:::code-group
+
+```ts [importRawTavernRegex]
 function importRawTavernRegex(filename: string, content: string): boolean;
 ```
+
+:::
+
+### 参数
+
+#### `filename`
+
+- **类型**: `string`
+- **描述**: 酒馆正则文件名
+
+#### `content`
+
+- **类型**: `string`
+- **描述**: 酒馆正则文件内容
+
+### 示例
+
+:::code-group
+
+```ts [importRawTavernRegex]
+const response = await fetch(酒馆正则网络链接);
+await importRawTavernRegex(酒馆正则名, await response.text());
+```
+
+:::
