--- a/src/guide/功能详情/楼层消息/修改消息.md
+++ b/src/guide/功能详情/楼层消息/修改消息.md
@@ -1,27 +1,31 @@
+---
+order: 1
+---
+
 # 修改消息
 
 :::tip
 请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
 :::
 
-[点击查看对应类型定义文件（可发给AI或IDE使用，酒馆助手设置中提供了打包下载）](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/chat_message.d.ts)
+[点击查看对应类型定义文件 (可发给 AI 或 IDE 使用, 酒馆助手界面中提供了打包下载)](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/chat_message.d.ts)
 
 <CustomTOC />
 
 ## setChatMessages
 
-修改聊天消息的数据。
+修改聊天消息的数据
 
 :::code-group
 
-```typescript [setChatMessages]
+```ts [setChatMessages]
 function setChatMessages(
   chat_messages: Array<{ message_id: number } & (Partial<ChatMessage> | Partial<ChatMessageSwiped>)>,
   option: SetChatMessagesOption = {}
 ): Promise<void>;
 ```
 
-```typescript [SetChatMessagesOption]
+```ts [SetChatMessagesOption]
 type SetChatMessagesOption = {
   refresh?: 'none' | 'affected' | 'all';
 }
@@ -34,56 +38,52 @@ type SetChatMessagesOption = {
 #### `chat_messages`
 
 - **类型**: `Array<{ message_id: number } & (Partial<ChatMessage> | Partial<ChatMessageSwiped>)>`
-- **描述**: 要修改的消息，必须包含 `message_id` 字段
+- **描述**: 要修改的消息, 必须包含 `message_id` 字段
 
 #### `refresh?`
 
 - **类型**: `'none' | 'affected' | 'all'`
-- **描述**: 是否更新楼层在页面上的显示，只会更新已经被加载在网页上的楼层，并触发被更新楼层的 "仅格式显示" 正则; 默认为 `'affected'`
+- **描述**: 是否更新楼层在页面上的显示, 只会更新已经被加载在网页上的楼层, 并触发被更新楼层的 "仅格式显示" 正则; 默认为 `'affected'`
   - `'none'`: 不更新页面的显示
-  - `'affected'`: 仅更新被影响楼层的显示，更新显示时会发送 `tavern_events.USER_MESSAGE_RENDERED` 或 `tavern_events.CHARACTER_MESSAGE_RENDERED` 事件
-  - `'all'`: 重新载入整个聊天消息，将会触发 `tavern_events.CHAT_CHANGED` 事件
+  - `'affected'`: 仅更新被影响楼层的显示, 更新显示时会发送 `tavern_events.USER_MESSAGE_RENDERED` 或 `tavern_events.CHARACTER_MESSAGE_RENDERED` 事件从而重新渲染前端
+  - `'all'`: 重新载入整个聊天消息, 将会触发 `tavern_events.CHAT_CHANGED` 事件
 
 ### 示例
 
 :::code-group
 
-```typescript [修改第 10 楼被 ai 使用的消息页的正文]
+```ts [修改第 10 楼被 AI 使用的消息页的正文]
 await setChatMessages([{message_id: 10, message: '新的消息'}]);
 ```
 
-```typescript [设置开局]
+```ts [设置开局]
 await setChatMessages([{message_id: 0, swipes: ['开局1', '开局2']}])
 ```
 
-```typescript [切换为开局 3]
+```ts [切换为开局 3]
 await setChatMessages([{message_id: 0, swipe_id: 2}]);
 ```
 
-```typescript [补充倒数第二楼的楼层变量]
+```ts [补充倒数第二楼的楼层变量]
 const chat_message = getChatMessages(-2)[0];
 _.set(chat_message.data, '神乐光好感度', 5);
 await setChatMessages([{message_id: 0, data: chat_message.data}], {refresh: 'none'});
 ```
 
-```typescript [隐藏所有楼层]
+```ts [隐藏所有楼层]
 const last_message_id = getLastMessageId();
 await setChatMessages(_.range(last_message_id + 1).map(message_id => ({message_id, is_hidden: true})));
 ```
 
 :::
 
-:::warning
-如果设置了当前会被发送给 ai 的消息文本 (正被使用且没被隐藏的消息页文本), 则 "仅格式提示词" 正则将会使用它而不是原来的消息。
-:::
-
 ## rotateChatMessages
 
-修改聊天消息的顺序，将原本顺序是 `[begin, middle) [middle, end)` 的楼层调整为 `[middle, end) [begin, middle)`。
+修改聊天消息的顺序, 将原本顺序是 `[begin, middle) [middle, end)` 的楼层调整为 `[middle, end) [begin, middle)`
 
 :::code-group
 
-```typescript [rotateChatMessages]
+```ts [rotateChatMessages]
 function rotateChatMessages(
   begin: number,
   middle: number,
@@ -92,7 +92,7 @@ function rotateChatMessages(
 ): Promise<void>;
 ```
 
-```typescript [RotateChatMessagesOption]
+```ts [RotateChatMessagesOption]
 type RotateChatMessagesOption = {
   refresh?: 'none' | 'all';
 }
@@ -120,25 +120,25 @@ type RotateChatMessagesOption = {
 #### `refresh?`
 
 - **类型**: `'none' | 'all'`
-- **描述**: 是否更新楼层在页面上的显示，只会更新已经被加载在网页上的楼层，并触发被更新楼层的 "仅格式显示" 正则; 默认为 `'all'`
+- **描述**: 是否更新楼层在页面上的显示, 只会更新已经被加载在网页上的楼层, 并触发被更新楼层的 "仅格式显示" 正则; 默认为 `'all'`
   - `'none'`: 不更新页面的显示
-  - `'all'`: 重新载入整个聊天消息，将会触发 `tavern_events.CHAT_CHANGED` 事件
+  - `'all'`: 重新载入整个聊天消息, 将会触发 `tavern_events.CHAT_CHANGED` 事件
 
 ### 示例
 
 :::code-group
 
-```typescript [将最后一楼放到前面]
+```ts [将最后一楼放到前面]
 // 将最后一楼放到第 5 楼之前
 await rotateChatMessages(5, getLastMessageId(), getLastMessageId() + 1);
 ```
 
-```typescript [将多个楼层放到前面]
+```ts [将多个楼层放到前面]
 // 将最后 3 楼放到第 1 楼之前
 await rotateChatMessages(1, getLastMessageId() - 2, getLastMessageId() + 1);
 ```
 
-```typescript [将前面的楼层放到后面]
+```ts [将前面的楼层放到后面]
 // 将前 3 楼放到最后
 await rotateChatMessages(0, 3, getLastMessageId() + 1);
 ```
