--- a/src/guide/功能详情/楼层消息/创建消息.md
+++ b/src/guide/功能详情/楼层消息/创建消息.md
@@ -1,27 +1,31 @@
+---
+order: 2
+---
+
 # 创建消息
 
 :::tip
 请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
 :::
 
-[点击查看对应类型定义文件（可发给AI或IDE使用，酒馆助手设置中提供了打包下载）](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/chat_message.d.ts)
+[点击查看对应类型定义文件 (可发给 AI 或 IDE 使用, 酒馆助手界面中提供了打包下载)](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/chat_message.d.ts)
 
 <CustomTOC />
 
 ## createChatMessages
 
-创建聊天消息。
+创建聊天消息
 
 :::code-group
 
-```typescript [createChatMessages]
+```ts [createChatMessages]
 function createChatMessages(
   chat_messages: ChatMessageCreating[],
   option: CreateChatMessagesOption = {}
 ): Promise<void>;
 ```
 
-```typescript [ChatMessageCreating]
+```ts [ChatMessageCreating]
 type ChatMessageCreating = {
   name?: string;
   role: 'system' | 'assistant' | 'user';
@@ -31,7 +35,7 @@ type ChatMessageCreating = {
 }
 ```
 
-```typescript [CreateChatMessagesOption]
+```ts [CreateChatMessagesOption]
 type CreateChatMessagesOption = {
   insert_at?: number | 'end';
   refresh?: 'none' | 'affected' | 'all';
@@ -45,9 +49,9 @@ type CreateChatMessagesOption = {
 #### `chat_messages`
 
 - **类型**: `ChatMessageCreating[]`
-- **描述**: 要创建的消息数组，每条消息必须包含 `role` 和 `message` 字段
+- **描述**: 要创建的消息数组, 每条消息必须包含 `role` 和 `message` 字段
 
-`ChatMessageCreating` 包含以下字段：
+`ChatMessageCreating` 包含以下字段:
 
 `name?`
 
@@ -77,34 +81,30 @@ type CreateChatMessagesOption = {
 #### `insert_at?`
 
 - **类型**: `number | 'end'`
-- **描述**: 插入到指定楼层前或末尾；默认为 `'end'`
+- **描述**: 插入到指定楼层前或末尾; 默认为 `'end'`
 
 #### `refresh?`
 
 - **类型**: `'none' | 'affected' | 'all'`
-- **描述**: 是否更新楼层在页面上的显示，只会更新已经被加载在网页上的楼层，并触发被更新楼层的 "仅格式显示" 正则; 默认为 `'affected'`
+- **描述**: 是否更新楼层在页面上的显示, 只会更新已经被加载在网页上的楼层, 并触发被更新楼层的 "仅格式显示" 正则; 默认为 `'affected'`
   - `'none'`: 不更新页面的显示
   - `'affected'`: 仅更新被影响楼层的显示
-  - `'all'`: 重新载入整个聊天消息，将会触发 `tavern_events.CHAT_CHANGED` 事件
+  - `'all'`: 重新载入整个聊天消息, 将会触发 `tavern_events.CHAT_CHANGED` 事件
 
 ### 示例
 
 :::code-group
 
-```typescript [在第 10 楼前插入一条消息]
+```ts [在第 10 楼前插入一条消息]
 await createChatMessages([{ role: 'user', message: '你好' }], { insert_at: 10 });
 ```
 
-```typescript [在末尾插入一条消息]
+```ts [在末尾插入一条消息]
 await createChatMessages([{ role: 'user', message: '你好' }]);
 ```
 
-```typescript [在末尾插入系统消息并设置数据]
-await createChatMessages([{ 
-  role: 'system', 
-  message: '系统通知', 
-  data: { 剧情阶段: '新手村' } 
-}]);
+```ts [在末尾插入系统消息并设置楼层变量]
+await createChatMessages([{ role: 'system', message: '系统通知', data: { 剧情阶段: '新手村' }}]);
 ```
 
 :::
