--- a/src/guide/功能详情/楼层消息/删除消息.md
+++ b/src/guide/功能详情/楼层消息/删除消息.md
@@ -1,27 +1,31 @@
+---
+order: 3
+---
+
 # 删除消息
 
 :::tip
 请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
 :::
 
-[点击查看对应类型定义文件（可发给AI或IDE使用，酒馆助手设置中提供了打包下载）](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/chat_message.d.ts)
+[点击查看对应类型定义文件 (可发给 AI 或 IDE 使用, 酒馆助手界面中提供了打包下载)](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/chat_message.d.ts)
 
 <CustomTOC />
 
 ## deleteChatMessages
 
-删除聊天消息。
+删除聊天消息, 这比酒馆自带的 `/del` 更为高效.
 
 :::code-group
 
-```typescript [deleteChatMessages]
+```ts [deleteChatMessages]
 function deleteChatMessages(
   message_ids: number[],
   option: DeleteChatMessagesOption = {}
 ): Promise<void>;
 ```
 
-```typescript [DeleteChatMessagesOption]
+```ts [DeleteChatMessagesOption]
 type DeleteChatMessagesOption = {
   refresh?: 'none' | 'all';
 }
@@ -39,20 +43,20 @@ type DeleteChatMessagesOption = {
 #### `refresh?`
 
 - **类型**: `'none' | 'all'`
-- **描述**: 是否更新楼层在页面上的显示，只会更新已经被加载在网页上的楼层，并触发被更新楼层的 "仅格式显示" 正则; 默认为 `'all'`
+- **描述**: 是否更新楼层在页面上的显示, 只会更新已经被加载在网页上的楼层, 并触发被更新楼层的 "仅格式显示" 正则; 默认为 `'all'`
   - `'none'`: 不更新页面的显示
-  - `'all'`: 重新载入整个聊天消息，将会触发 `tavern_events.CHAT_CHANGED` 事件
+  - `'all'`: 重新载入整个聊天消息, 将会触发 `tavern_events.CHAT_CHANGED` 事件
 
 ### 示例
 
 :::code-group
 
-```typescript [删除特定楼层]
+```ts [删除特定楼层]
 // 删除第 10 楼、第 15 楼、倒数第二楼和最新楼层
 await deleteChatMessages([10, 15, -2, getLastMessageId()]);
 ```
 
-```typescript [删除所有楼层]
+```ts [删除所有楼层]
 // 删除所有楼层
 await deleteChatMessages(_.range(getLastMessageId() + 1));
 ```
