--- a/src/guide/功能详情/楼层消息/获取消息.md
+++ b/src/guide/功能详情/楼层消息/获取消息.md
@@ -1,29 +1,33 @@
+---
+order: 0
+---
+
 # 获取消息
 
 :::tip
 请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
 :::
 
-[点击查看对应类型定义文件（可发给AI或IDE使用，酒馆助手设置中提供了打包下载）](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/chat_message.d.ts)
+酒馆虽然提供了 `/messages` 命令, 但是它获取的是一整个字符串, 并且不能获取楼层当前没在使用的消息 (点击箭头切换的那个 swipe 消息, 在酒馆助手中我们称之为 "消息页"), 酒馆助手为此提供了一套函数获取更便于处理的消息.
+
+[点击查看对应类型定义文件 (可发给 AI 或 IDE 使用, 酒馆助手界面中提供了打包下载)](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/chat_message.d.ts)
 
 <CustomTOC />
 
 ## getChatMessages
 
-获取聊天消息。
-
-酒馆虽然提供了 `/messages` 命令，但是它获取的是一整个字符串，并且不能获取楼层当前没在使用的消息 (点击箭头切换的那个 swipe 消息，在酒馆助手中我们称之为 "消息页"), 酒馆助手为此提供了一个函数获取更便于处理的消息。
+获取聊天消息
 
 :::code-group
 
-```typescript [getChatMessages]
+```ts [getChatMessages]
 function getChatMessages(
   range: string | number,
   option: GetChatMessagesOption = {}
 ): ChatMessage[] | ChatMessageSwiped[];
 ```
 
-```typescript [GetChatMessagesOption]
+```ts [GetChatMessagesOption]
 type GetChatMessagesOption = {
   role?: "all" | "system" | "assistant" | "user";
   hide_state?: "all" | "hidden" | "unhidden";
@@ -31,7 +35,7 @@ type GetChatMessagesOption = {
 }
 ```
 
-```typescript [ChatMessage]
+```ts [ChatMessage]
 type ChatMessage = {
   message_id: number;
   name: string;
@@ -43,7 +47,7 @@ type ChatMessage = {
 }
 ```
 
-```typescript [ChatMessageSwiped]
+```ts [ChatMessageSwiped]
 type ChatMessageSwiped = {
   message_id: number;
   name: string;
@@ -63,146 +67,55 @@ type ChatMessageSwiped = {
 #### `range`
 
 - **类型**: `number | string`
-- **描述**: 要获取的消息楼层号或楼层范围，与 `/messages` 相同
+- **描述**: 要获取的消息楼层号 (`14`) 或楼层范围 (`'0-100'`), 范围中可以用宏 (`'0-{{lastMessageId}}'`)
 
 #### `role?`
 
 - **类型**: `'system' | 'assistant' | 'user'`
-- **描述**: 按 role 筛选消息；默认为 `'all'`
+- **描述**: 按 role 筛选消息; 默认为 `'all'`
 
 #### `hide_state?`
 
 - **类型**: `'all' | 'hidden' | 'unhidden'`
-- **描述**: 按是否被隐藏筛选消息；默认为 `'all'`
+- **描述**: 按是否被隐藏筛选消息; 默认为 `'all'`
 
 #### `include_swipes?`
 
 - **类型**: `boolean`
-- **描述**: 是否包含未被 ai 使用的消息页信息，如没选择的开局、通过点击箭头重 roll 的楼层。如果为 `false` 则返回 `ChatMessage` 类型，如果为 `true` 则返回 `ChatMessageSwiped` 类型；默认为 `false`
+- **描述**: 是否包含未被 AI 使用的消息页信息, 如没选择的开局、通过点击箭头额外生成的消息页. 如果为 `false` 则函数返回 `ChatMessage` 类型, 如果为 `true` 则函数返回 `ChatMessageSwiped` 类型; 默认为 `false`
 
 ### 返回值
 
-如果 `include_swipes` 为 `false`（默认情况）:
+如果 `include_swipes` 为 `false` (默认情况):
 
-- 返回 `ChatMessage[]`，每条消息只包含被 AI 使用的消息页
+- 返回 `ChatMessage[]`, 每条消息只包含被 AI 使用的消息页
 - 按 message_id 从低到高排序
 
 如果 `include_swipes` 为 `true`:
 
-- 返回 `ChatMessageSwiped[]`，每条消息包含所有消息页
+- 返回 `ChatMessageSwiped[]`, 每条消息包含所有消息页
 - 按 message_id 从低到高排序
 
 ### 示例
 
 :::code-group
 
-```typescript [仅获取第 10 楼会被 ai 使用的消息页]
+```ts [仅获取第 10 楼会被 AI 使用的消息页]
 const messages = await getChatMessages(10);
 const messages = await getChatMessages("10");
 const messages = await getChatMessages("10", { include_swipes: false });
 ```
 
-```typescript [获取最新楼层被 ai 使用的消息页]
+```ts [获取最新楼层被 AI 使用的消息页]
 const message = getChatMessages(-1)[0]; // 或 getChatMessages('{{lastMessageId}}')[0]
 ```
 
-```typescript [获取所有楼层所有的消息页]
+```ts [获取所有楼层被 AI 使用的消息页]
+const messages = await getChatMessages("0-{{lastMessageId}}");
+```
+
+```ts [获取所有楼层所有的消息页]
 const messages = await getChatMessages("0-{{lastMessageId}}", { include_swipes: true });
-```
-
-:::
-
-## formatAsDisplayedMessage
-
-将字符串处理为酒馆用于显示的 html 格式。
-
-1. 替换字符串中的酒馆宏
-2. 对字符串应用对应的酒馆正则
-3. 将字符串调整为 html 格式
-
-:::code-group
-
-```typescript [formatAsDisplayedMessage]
-function formatAsDisplayedMessage(
-  text: string,
-  option: FormatAsDisplayedMessageOption = {}
-): string;
-```
-
-```typescript [FormatAsDisplayedMessageOption]
-type FormatAsDisplayedMessageOption = {
-  message_id?: "last" | "last_user" | "last_char" | number; // 消息所在的楼层，要求该楼层已经存在，即在 `[0, await getLastMessageId()]` 范围内; 默认为 'last'
-}
-```
-
-:::
-
-### 参数
-
-#### `text`
-
-- **类型**: `string`
-- **描述**: 要处理的字符串
-
-#### `message_id?`
-
-- **类型**: `'last' | 'last_user' | 'last_char' | number`
-- **描述**: 消息所在的楼层，要求该楼层已经存在，即在 `[0, await getLastMessageId()]` 范围内; 默认为 `'last'`
-
-### 返回值
-
-- **处理结果**: `string`
-
-### 示例
-
-```typescript
-const text = formatAsDisplayedMessage(
-  "{{char}} speaks in {{lastMessageId}}"
-);
-text == "<p>少女歌剧 speaks in 5</p>";
-```
-
-## retrieveDisplayedMessage
-
-获取消息楼层号对应的消息内容 JQuery。
-
-相比于一个实用函数，这更像是一个告诉你可以这样用 JQuery 的示例。
-
-```typescript
-function retrieveDisplayedMessage(message_id: number): JQuery<HTMLDivElement> {
-  return $(`div.mes[mesid = "${message_id}"]`, window.parent.document).find(
-    `div.mes_text`
-  );
-}
-```
-
-### 参数
-
-#### `message_id`
-
-- **类型**: `number`
-- **描述**: 要获取的消息楼层号，必须要酒馆页面显示了该消息楼层才能获取到
-
-### 返回值
-
-- **对应的JQuery**: 如果能获取到该消息楼层的 html, 则返回对应的 JQuery; 否则返回空 JQuery
-
-### 示例
-
-:::code-group
-
-```typescript [获取第 0 楼的消息内容文本]
-const text = retrieveDisplayedMessage(0).text();
-```
-
-```typescript [修改第 0 楼的消息内容文本]
-// 这样的修改只会影响本次显示，不会保存到消息文件中，因此重新加载消息或刷新网页等操作后就会回到原样;
-// 如果需要实际修改消息文件，请使用 `setChatMessages`
-retrieveDisplayedMessage(0).text("new text");
-retrieveDisplayedMessage(0).append("<pre>new text</pre>");
-retrieveDisplayedMessage(0).append(
-  formatAsDisplayedMessage("{{char}} speaks in {{lastMessageId}}")
-);
 ```
 
 :::
