--- a/src/guide/功能详情/请求生成.md
+++ b/src/guide/功能详情/请求生成.md
@@ -4,34 +4,35 @@
 请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
 :::
 
-酒馆助手提供了函数用于更加灵活地请求 AI 生成回复，你可以通过它来自定义生成时要采用的提示词配置。
-[点击查看对应类型定义文件（可发给 AI 或 IDE 使用，酒馆助手设置中提供了打包下载）](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/generate.d.ts)
+酒馆助手提供了函数用于更加灵活地请求 AI 生成回复, 你可以通过它来自定义生成时要采用的提示词配置.
+
+[点击查看对应类型定义文件 (可发给 AI 或 IDE 使用, 酒馆助手界面中提供了打包下载)](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/generate.d.ts)
 
 :::warning
-目前仅支持聊天补全（`Chat Completion`）。
+目前仅支持聊天补全 (`Chat Completion`).
 :::
 
 <CustomTOC />
 ## generate
 
-使用 Silly Tavern 当前启用的预设，让 AI 生成一段文本。
+使用 SillyTavern 当前启用的预设, 让 AI 生成一段文本
 
 :::code-group
 
-```typescript [generate]
+```ts [generate]
 function generate(config: GenerateConfig): Promise<string>;
 ```
 
-```typescript [GenerateConfig]
+```ts [GenerateConfig]
 type GenerateConfig = {
   /** 用户输入 */
   user_input?: string;
 
   /**
-   * 图片输入，支持以下格式：
-   * - File 对象：通过 input[type="file"] 获取的文件对象
-   * - Base64 字符串：图片的 base64 编码
-   * - URL 字符串：图片的在线地址
+   * 图片输入, 支持以下格式:
+   * - File 对象: 通过 input[type="file"] 获取的文件对象
+   * - Base64 字符串: 图片的 base64 编码
+   * - URL 字符串: 图片的在线地址
    */
   image?: File | string | (File | string)[];
 
@@ -65,7 +66,7 @@ type GenerateConfig = {
   /**
    * 唯一id
    *
-   * 可以并发生成，并可以通过stopGenerateById停止特定生成，不设置默认生成uuid，在发送的事件中也会返回该id
+   * 可以并发生成, 并可以通过stopGenerateById停止特定生成, 不设置默认生成uuid, 在发送的事件中也会返回该id
    */
   generation_id?: string;
 };
@@ -78,7 +79,7 @@ type GenerateConfig = {
 #### `generation_id?`
 
 - **类型**: `string`
-- **描述**: 生成 ID。如果设置，可以通过事件监听接收某一特定请求的生成结果。以及中止特定id的请求。具体见[函数的事件发送](./请求生成#函数的事件发送)，不提供时，则使用随机uuid作为id。
+- **描述**: 生成 ID. 如果设置, 可以通过事件监听接收某一 id 请求的生成结果, 或中止特定 id 的请求, 具体见[函数的事件发送](./请求生成#函数的事件发送). 不提供时, 则使用随机 uuid 作为 id
 
 #### `user_input?`
 
@@ -88,30 +89,30 @@ type GenerateConfig = {
 #### `should_stream?`
 
 - **类型**: `boolean`
-- **描述**: 是否启用流式传输；默认为 `false`。启用流式传输后，可以接收到额外的事件，通过参数获得传输过程的完整/增量文本。具体见[函数的事件发送](./请求生成#函数的事件发送)
+- **描述**: 是否启用流式传输; 默认为 `false`. 启用流式传输后, 可以接收到额外的事件, 通过参数获得传输过程的完整/增量文本. 具体见[函数的事件发送](./请求生成#函数的事件发送)
 
 #### `image?`
 
 - **类型**: `File|string[]`
-- **描述**: 图片输入，支持以数组形式输入多张图片：
-  - `File` 对象：通过 `input[type="file"]` 获取的文件对象
-  - `Base64` 字符串：图片的 base64 编码
-  - `URL` 字符串：图片的在线地址
+- **描述**: 图片输入, 支持以数组形式输入多张图片:
+  - `File` 对象: 通过 `input[type="file"]` 获取的文件对象
+  - `Base64` 字符串: 图片的 base64 编码
+  - `URL` 字符串: 图片的在线地址
 
 #### `custom_api?`
 
 - **类型**: `CustomApiConfig`
-- **描述**: 自定义 API 配置，具体见[CustomApiConfig 参数详情](./请求生成#customapiconfig)
+- **描述**: 自定义 API 配置, 具体见[CustomApiConfig 参数详情](./请求生成#customapiconfig)
 
 #### `overrides?`
 
 - **类型**: `Overrides`
-- **描述**: 覆盖选项。若设置, 则 `overrides` 中给出的字段将会覆盖对应的提示词。如 `overrides.char_description = '覆盖的角色描述';` 将会覆盖角色描述。具体见[Overrides 参数详情](./请求生成#overrides-2)
+- **描述**: 覆盖选项. 若设置, 则 `overrides` 中给出的字段将会覆盖对应的提示词. 如 `overrides.char_description = '覆盖的角色描述';` 将会覆盖角色描述. 具体见[Overrides 参数详情](./请求生成#overrides-2)
 
 #### `injects?`
 
 - **类型**: `Omit<InjectionPrompt, 'id'>[]`
-- **描述**: 要额外注入的提示词，具体见[InjectionPrompt 参数详情](./注入提示词#injectionprompt)
+- **描述**: 要额外注入的提示词, 具体见[InjectionPrompt 参数详情](./注入提示词#injectionprompt)
 
 #### `max_chat_history?`
 
@@ -126,18 +127,18 @@ type GenerateConfig = {
 
 :::code-group
 
-```typescript [流式生成]
+```ts [流式生成]
 const result = await generate({ user_input: "你好", should_stream: true });
 ```
 
-```typescript [图片输入]
+```ts [图片输入]
 const result = await generate({
   user_input: "你好",
   image: "https://example.com/image.jpg",
 });
 ```
 
-```typescript [注入、覆盖提示词]
+```ts [注入、覆盖提示词]
 const result = await generate({
   user_input: '你好',
   injects: [{ role: 'system', content: '思维链...', position: 'in_chat', depth: 0, should_scan: true, }]
@@ -155,15 +156,15 @@ const result = await generate({
 
 ## generateRaw
 
-不使用 SillyTavern 当前启用的预设，让 AI 生成一段文本。
+不使用 SillyTavern 当前启用的预设, 让 AI 生成一段文本
 
 :::code-group
 
-```typescript [generateRaw]
+```ts [generateRaw]
 function generateRaw(config: GenerateConfig): Promise<string>;
 ```
 
-```typescript [GenerateConfig]
+```ts [GenerateConfig]
 type GenerateRawConfig = {
   /**
    * 用户输入.
@@ -173,10 +174,10 @@ type GenerateRawConfig = {
   user_input?: string;
 
   /**
-   * 图片输入，支持以下格式：
-   * - File 对象：通过 input[type="file"] 获取的文件对象
-   * - Base64 字符串：图片的 base64 编码
-   * - URL 字符串：图片的在线地址
+   * 图片输入, 支持以下格式:
+   * - File 对象: 通过 input[type="file"] 获取的文件对象
+   * - Base64 字符串: 图片的 base64 编码
+   * - URL 字符串: 图片的在线地址
    */
   image?: File | string | (File | string)[];
 
@@ -201,7 +202,7 @@ type GenerateRawConfig = {
   injects?: Omit<InjectionPrompt, 'id'>[];
 
   /**
-   * 一个提示词数组, 数组元素将会按顺序发给 ai, 因而相当于自定义预设. 该数组允许存放两种类型:
+   * 一个提示词数组, 数组元素将会按顺序发给 AI, 因而相当于自定义预设. 该数组允许存放两种类型:
    * - `BuiltinPrompt`: 内置提示词. 由于不使用预设, 如果需要 "角色描述" 等提示词, 你需要自己指定要用哪些并给出顺序
    *                      如果不想自己指定, 可通过 `builtin_prompt_default_order` 得到酒馆默认预设所使用的顺序 (但对于这种情况, 也许你更应该用 `generate`).
    * - `RolePrompt`: 要额外给定的提示词.
@@ -217,54 +218,54 @@ type GenerateRawConfig = {
   /**
    * 唯一id
    *
-   * 可以并发生成，并可以通过stopGenerateById停止特定生成，不设置默认生成uuid，在发送的事件中也会返回该id
+   * 可以并发生成, 并可以通过stopGenerateById停止特定生成, 不设置默认生成uuid, 在发送的事件中也会返回该id
    */
   generation_id?: string;
 };
 ```
-:::
 
+:::
 
 ### 参数
 
 #### `generation_id?`
 
 - **类型**: `string`
-- **描述**: 生成 ID。如果设置，可以通过事件监听接收某一特定请求的生成结果。以及中止特定id的请求。具体见[函数的事件发送](./请求生成#函数的事件发送)，不提供时，则使用随机uuid作为id。
+- **描述**: 生成 ID. 如果设置, 可以通过事件监听接收某一 id 请求的生成结果, 或中止特定 id 的请求, 具体见[函数的事件发送](./请求生成#函数的事件发送). 不提供时, 则使用随机 uuid 作为 id
 
 #### `user_input?`
 
 - **类型**: `string`
-- **描述**: 如果设置，则无论 ordered_prompts 中是否有 `user_input` 都会加入该用户输入提示词；默认加入在 `chat_history` 末尾。
+- **描述**: 如果设置, 则无论 ordered_prompts 中是否有 `user_input` 都会加入该用户输入提示词; 默认加入在 `chat_history` 末尾
 
 #### `should_stream?`
 
 - **类型**: `boolean`
-- **描述**: 是否启用流式传输；默认为 `false`
+- **描述**: 是否启用流式传输; 默认为 `false`
 
 #### `image?`
 
 - **类型**: `File|string[]`
-- **描述**: 图片输入，支持以数组形式输入多张图片：
+- **描述**: 图片输入, 支持以数组形式输入多张图片:
 
-  - `File` 对象：通过 `input[type="file"]` 获取的文件对象
-  - `Base64` 字符串：图片的 base64 编码
-  - `URL` 字符串：图片的在线地址
+  - `File` 对象: 通过 `input[type="file"]` 获取的文件对象
+  - `Base64` 字符串: 图片的 base64 编码
+  - `URL` 字符串: 图片的在线地址
 
 #### `custom_api?`
 
 - **类型**: `CustomApiConfig`
-- **描述**: 自定义 API 配置，具体见[CustomApiConfig 参数详情](./请求生成#customapiconfig)
+- **描述**: 自定义 API 配置, 具体见[CustomApiConfig 参数详情](./请求生成#customapiconfig)
 
 #### `overrides?`
 
 - **类型**: `Overrides`
-- **描述**: 覆盖选项。若设置, 则 `overrides` 中给出的字段将会覆盖对应的提示词。如 `overrides.char_description = '覆盖的角色描述';` 将会覆盖角色描述。具体见[Overrides 参数详情](./请求生成#overrides-2)
+- **描述**: 覆盖选项. 若设置, 则 `overrides` 中给出的字段将会覆盖对应的提示词. 如 `overrides.char_description = '覆盖的角色描述';` 将会覆盖角色描述. 具体见[Overrides 参数详情](./请求生成#overrides-2)
 
 #### `injects?`
 
 - **类型**: `Omit<InjectionPrompt, 'id'>[]`
-- **描述**: 要额外注入的提示词，具体见[InjectionPrompt 参数详情](./注入提示词#injectionprompt)
+- **描述**: 要额外注入的提示词, 具体见[InjectionPrompt 参数详情](./注入提示词#injectionprompt)
 
 #### `max_chat_history?`
 
@@ -274,9 +275,9 @@ type GenerateRawConfig = {
 #### `ordered_prompts?`
 
 - **类型**: `(BuiltinPrompt | RolePrompt)[]`
-- **描述**: 一个提示词数组，数组元素将会按顺序发给 ai，因而相当于自定义预设。该数组允许存放两种类型：
-  - [`BuiltinPrompt`](./请求生成#builtinprompt): 内置提示词。由于不使用预设, 如果需要 "角色描述" 等提示词, 你需要自己指定需要使用哪些并给出顺序。如果不想自己指定, 函数会自行使用 `builtin_prompt_default_order` 中的酒馆默认预设顺序（但对于这种情况，你也许更应该用 [`generate`](./请求生成#generate)）。
-  - [`RolePrompt`](./请求生成#roleprompt): 要额外给定的提示词。
+- **描述**: 一个提示词数组, 数组元素将会按顺序发给 AI, 因而相当于自定义预设. 该数组允许存放两种类型:
+  - [`BuiltinPrompt`](./请求生成#builtinprompt): 内置提示词. 由于不使用预设, 如果需要 "角色描述" 等提示词, 你需要自己指定需要使用哪些并给出顺序. 如果不想自己指定, 函数会自行使用 `builtin_prompt_default_order` 中的酒馆默认预设顺序 (但对于这种情况, 你也许更应该用 [`generate`](./请求生成#generate))
+  - [`RolePrompt`](./请求生成#roleprompt): 要额外给定的提示词
 
 ### 返回值
 
@@ -284,7 +285,7 @@ type GenerateRawConfig = {
 
 ### 示例
 
-```typescript
+```ts
 // 自定义内置提示词顺序, 未在 ordered_prompts 中给出的将不会被使用
 const result = await generateRaw({
   user_input: "你好",
@@ -303,12 +304,13 @@ const result = await generateRaw({
 
 该函数在执行过程中将会发送以下事件:
 
-- `iframe_events.GENERATION_STARTED`：生成开始
-- 若启用流式传输, `iframe_events.STREAM_TOKEN_RECEIVED_FULLY`：监听它可以得到流式传输的当前完整文本 ("这是", "这是一条", "这是一条流式传输")
-- 若启用流式传输, `iframe_events.STREAM_TOKEN_RECEIVED_INCREMENTALLY`：监听它可以得到流式传输的当前增量文本 ("这是", "一条", "流式传输")
-- `iframe_events.GENERATION_ENDED`：生成结束, 监听它可以得到生成的最终文本 (当然也能通过函数返回值获得)
-- 生成时将一同发送generation_id
-```typescript
+- `iframe_events.GENERATION_STARTED`: 生成开始
+- 若启用流式传输, `iframe_events.STREAM_TOKEN_RECEIVED_FULLY`: 监听它可以得到流式传输的当前完整文本 ("这是", "这是一条", "这是一条流式传输")
+- 若启用流式传输, `iframe_events.STREAM_TOKEN_RECEIVED_INCREMENTALLY`: 监听它可以得到流式传输的当前增量文本 ("这是", "一条", "流式传输")
+- `iframe_events.GENERATION_ENDED`: 生成结束, 监听它可以得到生成的最终文本 (当然也能通过函数返回值获得)
+- 生成时将一同发送 generation_id
+
+```ts
   [iframe_events.GENERATION_STARTED]: (generation_id: string) => void;
   [iframe_events.STREAM_TOKEN_RECEIVED_FULLY]: (full_text: string, generation_id: string) => void;
   [iframe_events.STREAM_TOKEN_RECEIVED_INCREMENTALLY]: (incremental_text: string, generation_id: string) => void;
@@ -359,10 +361,10 @@ const result = await generateRaw({
 #### `chat_history?`
 
 - **类型**: `{with_depth_entries?: boolean, author_note?: string; prompts?: RolePrompt[];}`
-- **描述**: 聊天历史，其中
+- **描述**: 聊天历史, 其中
   - `with_depth_entries`: 是否启用世界书中按深度插入的条目; 默认为 `true`
   - `author_note`: 若设置, 覆盖 "作者注释" 为给定的字符串
-  - `prompts`: 若设置, 覆盖 "聊天历史" 为给定的提示词，详见[RolePrompt 格式](./请求生成#roleprompt)
+  - `prompts`: 若设置, 覆盖 "聊天历史" 为给定的提示词, 详见[RolePrompt 格式](./请求生成#roleprompt)
 
 ### `RolePrompt`
 
@@ -378,9 +380,9 @@ const result = await generateRaw({
 
 ### `BuiltinPrompt`
 
-不指定 `ordered_prompts` 时，将使用以下默认顺序排列提示词：
+不指定 `ordered_prompts` 时, 将使用以下默认顺序排列提示词:
 
-```typescript
+```ts
 const builtin_prompt_default_order: BuiltinPrompt[] = [
   "world_info_before", // 世界书(角色定义前)
   "persona_description", // 用户描述
@@ -394,9 +396,9 @@ const builtin_prompt_default_order: BuiltinPrompt[] = [
 ];
 ```
 
-仅以下字符串可被 `generateRaw` 识别：
+仅以下字符串可被 `generateRaw` 识别:
 
-```typescript
+```ts
 type BuiltinPrompt =
   | "world_info_before" // 世界书(角色定义前)
   | "persona_description" // 用户描述
@@ -409,19 +411,19 @@ type BuiltinPrompt =
   | "user_input"; // 用户输入
 ```
 
-**`user_input`与`chat_history`的关系：**
+**`user_input`与`chat_history`的关系:**
 
-在[`generateRaw`](./请求生成#generateRaw)中，`user_input`可以自由选择放置的位置了。关于`user_input`和`chat_history`的关系如下：
+在[`generateRaw`](./请求生成#generateRaw)中, `user_input`可以自由选择放置的位置了. 关于`user_input`和`chat_history`的关系如下:
 
-当`chat_history`不在`ordered_prompts`：
+当`chat_history`不在`ordered_prompts`:
 
-- 如果`user_input`未在 `ordered_prompts` 中：将自动添加到所有提示词的最后面
-- 如果`user_input`在 `ordered_prompts` 中：以`user_input`在 `ordered_prompts` 中的位置为准
+- 如果`user_input`未在 `ordered_prompts` 中: 将自动添加到所有提示词的最后面
+- 如果`user_input`在 `ordered_prompts` 中: 以`user_input`在 `ordered_prompts` 中的位置为准
 
-当`chat_history`在`ordered_prompts`时：
+当`chat_history`在`ordered_prompts`时:
 
-- 如果`user_input`未在 `ordered_prompts` 中：将自动插入到最新一条聊天记录后
-- 如果`user_input`在 `ordered_prompts` 中：`user_input`和`chat_history`会分别插入到 `ordered_prompts` 中指示的位置
+- 如果`user_input`未在 `ordered_prompts` 中: 将自动插入到最新一条聊天记录后
+- 如果`user_input`在 `ordered_prompts` 中: `user_input`和`chat_history`会分别插入到 `ordered_prompts` 中指示的位置
 
 ### `CustomApiConfig`
 
@@ -443,9 +445,9 @@ type BuiltinPrompt =
 #### `source?`
 
 - **类型**: `string`
-- **描述**: API 源，默认为 `'openai'`
+- **描述**: API 源, 默认为 `'openai'`
 
 :::warning
-`source` 参数用于指定 API 源，目前支持的源请查看酒馆官方代码[`SillyTavern/src/constants.js`](https://github.com/SillyTavern/SillyTavern/blob/2e3dff73a127679f643e971801cd51173c2c34e7/src/constants.js#L164)（可点击跳转）所列出的源。
-但由于是通过强制使用反代来做到自定义 API，所以可能不支持在酒馆中未提供反向代理选项的聊天补全来源，但主流的`openai`、`claude`、`makersuite`(gemini)、`deepseek`都支持。
+`source` 参数用于指定 API 源, 目前支持的源请查看酒馆官方代码[`SillyTavern/src/constants.js`](https://github.com/SillyTavern/SillyTavern/blob/2e3dff73a127679f643e971801cd51173c2c34e7/src/constants.js#L164) (可点击跳转) 所列出的源.
+但由于是通过强制使用反代来做到自定义 API, 所以可能不支持在酒馆中未提供反向代理选项的聊天补全来源, 但主流的`openai`、`claude`、`makersuite`(gemini)、`deepseek`都支持.
 :::
