--- a/src/guide/基本用法/开发其他插件时使用.md
+++ b/src/guide/基本用法/开发其他插件时使用.md
@@ -1,13 +1,13 @@
 ---
-order: 5
+order: 6
 ---
 
 # 开发其他插件时使用
 
-通过 `TavernHelper`，其他扩展也可以访问酒馆助手提供的稳定接口，可用接口为功能详情中的全部内容。
+通过 `TavernHelper`, 其他扩展也可以访问酒馆助手提供的稳定接口, 可用接口为 "功能详情" 中的全部内容.
 
-我们为酒馆插件也提供了[基于 Vite、Vue 和 Pinia 的编写模板](http://github.com/StageDog/tavern_extension_template)；当然酒馆助手脚本相比于酒馆插件更为方便，因此我们提供了[酒馆助手前端界面或脚本编写模板](https://github.com/StageDog/tavern_helper_template)。
+我们为酒馆插件也提供了[基于 Vite、Vue 和 Pinia 的编写模板](http://github.com/StageDog/tavern_extension_template); 当然酒馆助手脚本相比于酒馆插件更为方便, 因此我们提供了[酒馆助手前端界面或脚本编写模板](https://github.com/StageDog/tavern_helper_template).
 
-为了让软件能正确识别酒馆助手功能，你需要下载、解压[@types.zip](https://gitlab.com/novi028/JS-Slash-Runner/-/raw/main/dist/@types.zip?ref_type=heads&inline=false)，并在 `tsconfig.json` 的 `include` 部分添加它。
+为了让软件能正确识别酒馆助手功能, 你需要下载、解压[@types.zip](https://gitlab.com/novi028/JS-Slash-Runner/-/raw/main/dist/@types.zip?ref_type=heads&inline=false), 并在 `tsconfig.json` 的 `include` 部分添加它.
 
-具体参考[接口访问](/guide/功能详情/接口访问.md#tavernhelper)
+更多内容请参考[接口访问](/guide/功能详情/接口访问.md#tavernhelper).
