--- a/src/guide/基本用法/脚本库.md
+++ b/src/guide/基本用法/脚本库.md
@@ -5,97 +5,32 @@ order: 2
 # 脚本库
 
 :::tip
-请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+要使用这一功能的作者请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md), 里面有详细的编写说明和应用提示.
 :::
 
-脚本库是酒馆助手的核心功能之一，用于管理和执行自动化脚本，前身为全局脚本，现在具有更完整的管理和编辑功能。
+酒馆助手的脚本库允许你在后台运行 JavaScript 脚本, 你因而可以做到每 20 楼自动调用一次 AI 来生成对之前剧情的总结等各种功能, 且可以让这些功能与预设、角色卡等绑定.
+
+和[渲染器](/guide/基本用法/渲染器.md)一样, 酒馆助手脚本也能使用 "功能详情" 中的各种功能, 如修改世界书、修改预设、设置变量、注入提示词等.
 
 ![脚本库示例](/脚本库.png)
 
-## 全局/局部脚本库
+## 绑定机制
 
-脚本库分为**全局脚本库**和**局部脚本库**两个部分
+脚本库分为全局、预设和角色脚本库:
 
-其中:
+- **全局脚本库**: 适用于酒馆所有聊天
+- **预设脚本库**: 适用于当前预设, 会随预设一同导出
+- **角色脚本库**: 适用于当前角色卡, 会随角色卡一同导出
 
-- **全局脚本库**：适用于酒馆所有聊天
-- **局部脚本库**：适用于当前角色卡，会随角色卡一同导出
+## 脚本按钮
 
-功能按钮：
+你可以为脚本添加按钮, 则用户点击按钮时会触发脚本内指定功能.
 
-- **开关**：控制脚本的运行
-- **信息**：查看脚本作者编写的脚本说明
-- **编辑**：修改脚本内容
-- **移动**：移动到另一作用范围的脚本库
-- **导出**：导出脚本配置
-- **删除**：移除脚本
-- **批量操作**：批量对脚本进行导出、删除、移动到文件夹等操作
+![脚本按钮](/脚本按钮.png)
 
-## 脚本组
+### 绑定方法
 
-脚本组可用于将多个脚本集中到一个组里，方便管理和执行。
-
-![脚本组](/脚本库文件夹.png)
-
-### 脚本组功能
-
-- 批量导出文件夹内的脚本为zip压缩文件，导入时可直接选择zip文件导入，会保持原有的脚本组结构
-- 批量开关脚本组内所有脚本
-- 自定义组的图标和颜色
-
-![脚本组自定义](/脚本组自定义.png)
-
-## 脚本编辑
-
-![脚本编辑](/脚本编辑.png)
-
-### 脚本内容
-
-- 使用 JavaScript 编写具体的脚本逻辑
-- 支持完整的 JavaScript 语法
-- 可以调用酒馆助手提供的 API 和功能，参考功能详情部分
-
-:::tip
-
-- 脚本可以直接使用 jQuery 的 `$` 符号控制 SillyTavern 主界面的 DOM 元素
-- 可以直接使用的库可在[内置第三方库](/guide/功能详情/其他辅助功能/内置第三方库)中查看，无需重复安装
-- 如果要在脚本关闭时执行功能，请使用 `$(window).on('pagehide', () => {})`
-
-:::
-
-### 作者备注
-
-- 可以添加脚本的说明文档
-- 支持简单的 markdown 和 html 格式
-- 建议包含以下信息：
-  1. 脚本功能说明
-  2. 使用方法
-  3. 版本信息
-  4. 更新记录
-  5. 注意事项
-
-### 变量列表
-
-为当前脚本绑定变量，可以随着脚本一同导出，也可在导出时清空防止敏感信息泄露。
-
-![导出脚本变量](/导出脚本变量.png)
-
-### 按键绑定
-
-可以为脚本添加多个按键绑定，当按下按键时，会触发脚本内指定功能运行。
-
-![按键触发](/按键触发.jpg)
-
-#### 按键绑定的UI说明
-
-- 拖动控件：对按键的顺序进行调整
-- 复选框：是否显示按键
-- 输入框：按键上显示的名称
-- 删除按钮：删除按键
-
-#### 绑定方法
-
-按键绑定功能需要配合 [`getButtonEvent`](/guide/功能详情/脚本功能) 使用，在脚本中添加以下代码：
+按键绑定功能需要配合 [`getButtonEvent`](/guide/功能详情/脚本额外功能#getbuttonevent) 使用, 在脚本中添加以下代码:
 
 ```javascript
 eventOn(getButtonEvent('按钮名称'), () => {
@@ -105,21 +40,20 @@ eventOn(getButtonEvent('按钮名称'), () => {
 ```
 
 :::warning
-`button_name` 需要与设置的按键名称一致。
+`'按钮名称'` 需要与设置的按键名称一致.
 :::
 
-#### 批量操作
+### 将酒馆快速回复迁移成酒馆助手脚本
 
-点击全局/局部脚本库旁边的齿轮按钮，可以对脚本进行批量导出、删除、移动等操作。
+脚本按钮让酒馆助手脚本成为了酒馆快速回复的完全上位替代:
 
-![批量操作](/脚本库批量操作.png)
+- 相比起写快速回复, AI 对于酒馆助手脚本的知识库更全面, 且我们专门提供了[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)让 AI 了解如何使用酒馆助手.
+- 酒馆助手脚本其实对标的是酒馆插件, 在编写体验上甚至比酒馆插件更好; 而无论酒馆助手脚本还是酒馆插件, 它们所能做的大多数事情是快速回复做不到的.
 
-- 批量导出：导出选中的脚本
-- 批量删除：删除选中的脚本
-- 批量移动：移动选中的脚本到某个文件夹
+大多数快速回复都能直接写成酒馆助手脚本, 例如快速回复 `/send 推进剧情 | /trigger` 可以写成:
 
-## 内置脚本库
-
-扩展内置的脚本，可直接添加到脚本库中使用。
-
-![内置脚本库](/内置脚本库.jpg)
+```javascript
+eventOn(getButtonEvent('推进'), () => {
+  triggerSlash('/send 推进剧情 | /trigger')
+});
+```
