--- a/src/guide/关于酒馆助手/常见问题/前端编写问题.md
+++ b/src/guide/关于酒馆助手/常见问题/前端编写问题.md
@@ -10,13 +10,13 @@ order: 3
 
 ## 代码渲染问题
 
-**问题**: 编写的代码不显示界面或显示不正确  
-**解决**:  确保同时满足
+**问题**: 编写的代码不显示界面或显示不正确
+**解决**: 确保同时满足以下条件:
 
 1. 代码使用三个反引号包裹
 2. 代码中包含 `<body></body>` 闭合标签
 
 ## QR 触发失效
 
-**问题**: QR 触发不起作用？  
-**解决**: 检查并删除代码中的 triggerSlash 函数定义，避免覆盖扩展默认定义
+**问题**: QR 触发不起作用?
+**解决**: 检查并删除代码中的 triggerSlash 函数定义, 避免覆盖扩展的函数
