--- a/src/guide/关于酒馆助手/常见问题/安装与更新问题.md
+++ b/src/guide/关于酒馆助手/常见问题/安装与更新问题.md
@@ -6,65 +6,65 @@ order: 1
 
 ## 安装后无任何响应
 
-**问题**: 安装扩展之后没有反应？  
-**解决**: 检查网络连接。如果使用需要代理的链接，请确保酒馆通过 VPN 连接网络，代理软件若有TUN模式（或者叫虚拟网卡模式）也一并开启。
+**问题**: 安装扩展之后没有反应?
+**解决**: 检查网络. 如果是使用需要代理的链接来安装酒馆, 请确保酒馆是通过 VPN 连接网络, 代理软件若有 TUN 模式 (或者叫虚拟网卡模式) 也一并开启.
 
 ## 安装/更新成功但扩展不显示
 
 **问题**:
 
 - 安装/更新提示成功但扩展未显示
-- 或者管理面板中无法勾选，呈灰色
-- 或者`Extension "酒馆助手" failed to load: [object Event]`
+- 或者管理面板中无法勾选, 呈灰色
+- 或者 `Extension "酒馆助手" failed to load: [object Event]`
 
 **解决**:
 
-- 网络问题不能下载酒馆助手依赖的第三方库，请更换网络链接重试
-- 升级酒馆版本。扩展仅支持1.12.10及以上版本
+- 网络问题不能下载酒馆助手依赖的第三方库, 请更换网络重试
+- 升级酒馆版本
 
 ## 安装时弹出红色错误弹窗
 
-根据弹窗提示的内容，可能有以下几种情况，请点击文字跳转至对应解决方案：
+根据弹窗提示的内容, 可能有以下几种情况, 请点击文字跳转至对应解决方案:
 
 - [`<Assets module> Cannot get assets list: Problem with assets URL`](#提示无法获取资源列表)
-- [`Server Error: Need to specify how to reconcile divergent branches.`](#提示更新失败，需要指定如何合并分支)
-- [`Server Error: fatal: unable to access 'https://gitlab.com/novi028/JS-Slash-Runner/': Recv failure:Connection was reset`](#错误信息中带有connect等类似字样)或者类似带有connection, connect等字样的错误信息
+- [`Server Error: Need to specify how to reconcile divergent branches.`](#提示更新失败-需要指定如何合并分支)
+- [`Server Error: fatal: unable to access 'https://gitlab.com/novi028/JS-Slash-Runner/': Recv failure:Connection was reset`](#错误信息中带有-connect-等类似字样)或者类似带有connection, connect等字样的错误信息
 
 ### 提示无法获取资源列表
 
-**问题**: 红色错误弹窗提示 `<Assets module> Cannot get assets list: Problem with assets URL`  
-**解决**: 安装链接的填写位置错误，应该填写在[安装扩展](../安装与更新#sillytavern在线安装)按钮中的输入框，而不是“下载扩展和资源菜单”中的输入框。
+**问题**: 红色错误弹窗提示 `<Assets module> Cannot get assets list: Problem with assets URL`
+**解决**: 安装链接的填写位置错误, 应该填写在[安装扩展](../安装与更新#sillytavern在线安装)按钮中的输入框, 而不是 "下载扩展和资源菜单" 中的输入框.
 
-### 提示更新失败，需要指定如何合并分支
+### 提示更新失败, 需要指定如何合并分支
 
-**问题**: 红色错误弹窗提示 `Server Error: Need to specify how to reconcile divergent branches.`  
-**解决**: 删除扩展重新安装，数据（开关设置、脚本等）会保留。
+**问题**: 红色错误弹窗提示 `Server Error: Need to specify how to reconcile divergent branches.`
+**解决**: 删除扩展重新安装, 数据 (开关设置、脚本等) 会保留.
 
 ## 安装时弹出黄色警告弹窗
 
-根据弹窗提示的内容，可能有以下几种情况，请点击文字跳转至对应解决方案：
+根据弹窗提示的内容, 可能有以下几种情况, 请点击文字跳转至对应解决方案:
 
 - [`Extension installation failed: Directory already exists...`](#提示文件夹已存在)
 - [`Extension installation failed: Server Error:Error: spawn git ENOENT at ChildProcess.handel.onexit...`](#git-相关错误)
 - [`Extension installation failed: Server Error: Cloning into 'data/default-user/extensions/JS-Slash-Runner'... warning:url contains a newline in its pathcomponent`](#链接输入错误)
 - [`Extension installation failed: Server Error: Cloning into 'data/default-user/extensions/JS-Slash-Runner'... remote:Repository not found. fatal:Authentication failed for'https://github.com/NOVI028/JS-Slash-Runner.git/'`](#链接输入错误)
-- [`Server Error: fatal: unable to access 'https://gitlab.com/novi028/JS-Slash-Runner/': Recv failure:Connection was reset`](#错误信息中带有connect等类似字样)或者类似带有connection, connect等字样的错误信息
+- [`Server Error: fatal: unable to access 'https://gitlab.com/novi028/JS-Slash-Runner/': Recv failure:Connection was reset`](#错误信息中带有-connect-等类似字样)或者类似带有connection, connect等字样的错误信息
 
 ### 提示文件夹已存在
 
-**问题**: 黄色警告弹窗提示 `Extension installation failed: Directory already exists...`  
+**问题**: 黄色警告弹窗提示 `Extension installation failed: Directory already exists...`
 **解决**:
 
 1. 进入酒馆安装目录 `SillyTavern/data/default-user/extensions`
 2. 删除 `JS-Slash-Runner` 文件夹
-3. 检查网络连接（建议使用不需要国外网络环境的[gitlab安装链接](../安装与更新#sillytavern在线安装)），重新安装扩展
+3. 检查网络连接 (建议使用不需要国外网络环境的[gitlab安装链接](../安装与更新#sillytavern在线安装)), 重新安装扩展
 
 ::: tip
-如果上方的路径找不到文件夹，查看`SillyTavern/public/scripts/extensions/third-party`下是否存在
+如果上方的路径找不到文件夹, 查看`SillyTavern/public/scripts/extensions/third-party`下是否存在
 :::
 
 ---
-附：安卓访问酒馆目录的方法
+附: 安卓访问酒馆目录的方法
 
 - **方法一: 通过文件管理器**
   1. 启动 Termux
@@ -76,39 +76,39 @@ order: 1
   2. 在 MT 管理器添加本地存储
   3. 通过 MT 管理器侧边栏访问 Termux
 
-- **方法三: 使用 zerotermux**  
-  ZeroTermux 是根据 Termux 二次开发的一个非盈利性的软件，安装其内部插件后可直接访问 Termux 文件目录。
+- **方法三: 使用 zerotermux**
+  ZeroTermux 是根据 Termux 二次开发的一个非盈利性的软件, 安装其内部插件后可直接访问 Termux 文件目录
 
-- 怎么都找不到文件夹但还是提示存在？**终极方案**:  
-  1. 打开termux，如果装了一键脚本输入0退出
-  2. 输入下面的内容，回车
+- 怎么都找不到文件夹但还是提示存在? **终极方案**:
+  1. 打开termux, 如果装了一键脚本输入 `0` 退出
+  2. 输入下面的内容, 回车
 
   ```bash
   cd /
   ```
 
-  1. 输入下面的内容，回车，然后等待搜索完成
+  1. 输入下面的内容, 回车, 然后等待搜索完成
 
   ```bash
   find ~ -type d -name "JS-Slash-Runner"
   ```
 
-  如果文件夹存在，上面会得到一个路径，复制下来，执行第四步
+  如果文件夹存在, 上面会得到一个路径, 复制下来, 执行第四步
 
-  4.使用`rm -rf`为开头（rf后面有一个空格），后接第三步搜索到的路径，输入命令后回车，以下是示例，路径需要你自行替换
+  4.使用 `rm -rf` 为开头 (注意 `rf` 后面要加一个空格), 后接第三步搜索到的路径, 输入命令后回车. 以下是示例, 路径需要你自行替换
 
   ```bash
   rm -rf /root/SillyTavern/data/default-user/extensions/JS-Slash-Runner
   ```
 
   :::warning
-  此方法删除后不会有任何提示，请谨慎使用。下面是直接一键删除的命令，但可控性较差：
+  此方法删除后不会有任何提示, 请谨慎使用. 下面是直接一键删除的命令, 但可控性较差:
   `find ~ -type d -name "JS-Slash-Runner" | rm -rf`
   :::
 
 ### Git 相关错误
 
-**问题**: 黄色警告弹窗提示 `Extension installation failed: Server Error:Error: spawn git ENOENT at ChildProcess.handel.onexit...`  
+**问题**: 黄色警告弹窗提示 `Extension installation failed: Server Error:Error: spawn git ENOENT at ChildProcess.handel.onexit...`
 **解决**:
 
 - 安装或重装 git
@@ -116,17 +116,17 @@ order: 1
 
 ---
 
-附：安装 git 方法
+附: 安装 git 方法
 
 - **Windows端**
 
-1. 访问 [git官网](https://git-scm.com/downloads)，选择 `Download for Windows` 后，在新页面选择`Click here to download`下载安装包。
-2. 安装时在 `Adjusting your PATH environment`（调整 PATH 环境变量）界面，选择有 `(Recommended)` 红字的推荐选项
+1. 访问 [git官网](https://git-scm.com/downloads), 选择 `Download for Windows` 后, 在新页面选择 `Click here to download` 下载安装包
+2. 安装时在 `Adjusting your PATH environment` (调整 PATH 环境变量) 界面, 选择有 `(Recommended)` 红字的推荐选项
 
 - **Termux端**
 
 1. 启动 Termux
-2. 如果使用了一键脚本，发送 `0` 退出
+2. 如果使用了一键脚本, 发送 `0` 退出
 3. 发送以下内容更新包管理器
 
    ```bash
@@ -139,43 +139,43 @@ order: 1
    pkg install git
    ```
 
-5. 安装完成后，发送以下内容检查是否安装成功
+5. 安装完成后, 发送以下内容检查是否安装成功
 
    ```bash
    git --version
    ```
 
-6. 如确认安装成功但仍提示错误，尝试重启电脑/Termux或酒馆
+6. 如确认安装成功但仍提示错误, 尝试重启电脑/Termux/酒馆
 
 ### 链接输入错误
 
 **问题**:
 
 - 黄色警告弹窗提示 `Extension installation failed: Server Error: Cloning into 'data/default-user/extensions/JS-Slash- Runner'... warning:url contains a newline in its pathcomponent`
-- 黄色警告弹窗提示 `Extension installation failed: Server Error: Cloning into 'data/default-user/extensions/JS-Slash-Runner'... remote:Repository not found. fatal:Authentication failed for'https://github.com/NOVI028/JS-Slash-Runner.git/'`  
-  
-**解决**: 都由填写的安装链接错误造成，检查是否出现如下情况，更正后重新安装
+- 黄色警告弹窗提示 `Extension installation failed: Server Error: Cloning into 'data/default-user/extensions/JS-Slash-Runner'... remote:Repository not found. fatal:Authentication failed for'https://github.com/NOVI028/JS-Slash-Runner.git/'`
 
-- 复制时在`Runner`前多了一个换行符，如`JS-Slash- Runner`
-- 使用屏幕识别导致链接中的大写字母`O`与数字`0`混淆，如`https://github.com/NOVI028/JS-Slash-Runner.git`
+**解决**: 都由填写的安装链接错误造成, 检查是否出现如下情况, 更正后重新安装
+
+- 复制时在 `Runner` 前多了一个空格, 如 `JS-Slash- Runner`
+- 使用屏幕识别导致链接中的大写字母 `O` 与数字 `0` 混淆, 如 `https://github.com/NOVI028/JS-Slash-Runner.git`
 - 其他导致链接错误的情况
 
-## 错误信息中带有`Connect`等类似字样
+## 错误信息中带有 `Connect` 等类似字样
 
-**问题**: 弹窗提示 `Server Error: fatal: unable to access 'https://gitlab.com/novi028/JS-Slash-Runner/': Recv failure:Connection was reset` 或者类似带有`Connection`，`connect`等字样的错误信息  
-**解决**: 检查网络连接，如果使用需要代理的链接，请确保酒馆通过 VPN 连接网络，代理软件若有TUN模式（或者叫虚拟网卡模式）也一并开启。
+**问题**: 弹窗提示 `Server Error: fatal: unable to access 'https://gitlab.com/novi028/JS-Slash-Runner/': Recv failure:Connection was reset` 或者类似带有 `Connection`, `connect` 等字样的错误信息
+**解决**: 检查网络连接, 如果使用需要代理的链接, 请确保酒馆通过 VPN 连接网络, 代理软件若有 TUN 模式 (或者叫虚拟网卡模式) 也一并开启
 
 ## 以上安装方法都失败
 
-**问题**: 常规安装方法都失败？  
+**问题**: 常规安装方法都失败?
 **解决**: 使用[手动安装方法](../安装与更新#手动安装)
 
 ## 扩展管理面板加载问题
 
-**问题**: 扩展管理面板一直显示 `Loading third-party extensions...`  
+**问题**: 扩展管理面板一直显示 `Loading third-party extensions...`
 **解决**: 连接或更换 VPN 后重试
 
-## 提示未连接到API
+## 提示未连接到 API
 
-**问题**: 扩展或扩展管理界面显示 `Not connected to the API!` 或 `Could not connect to API` 的红色错误提示文字  
-**解决**: 此提示与酒馆助手无关，本扩展无需连接API
+**问题**: 扩展或扩展管理界面显示 `Not connected to the API!` 或 `Could not connect to API` 的红色错误提示文字
+**解决**: 此提示与酒馆助手无关, 本扩展无需连接 API
