--- a/src/guide/功能详情/世界书/修改世界书.md
+++ b/src/guide/功能详情/世界书/修改世界书.md
@@ -1,18 +1,22 @@
+---
+order: 1
+---
+
 # 修改世界书
 
 :::tip
 请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
 :::
 
-[点击查看对应类型定义文件（可发给AI或IDE使用，酒馆助手设置中提供了打包下载）](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/worldbook.d.ts)
+[点击查看对应类型定义文件 (可发给 AI 或 IDE 使用, 酒馆助手界面中提供了打包下载)](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/worldbook.d.ts)
 
 <CustomTOC />
 
 ## rebindGlobalWorldbooks
 
-重新绑定全局世界书。
+重新绑定全局世界书
 
-```typescript
+```ts
 function rebindGlobalWorldbooks(worldbook_names: string[]): Promise<void>;
 ```
 
@@ -25,9 +29,9 @@ function rebindGlobalWorldbooks(worldbook_names: string[]): Promise<void>;
 
 ## rebindCharWorldbooks
 
-重新绑定角色卡世界书。
+重新绑定角色卡世界书
 
-```typescript
+```ts
 function rebindCharWorldbooks(character_name: 'current', char_worldbooks: CharWorldbooks): Promise<void>;
 ```
 
@@ -45,9 +49,9 @@ function rebindCharWorldbooks(character_name: 'current', char_worldbooks: CharWo
 
 ## rebindChatWorldbook
 
-重新绑定聊天文件世界书。
+重新绑定聊天文件世界书
 
-```typescript
+```ts
 function rebindChatWorldbook(chat_name: 'current', worldbook_name: string): Promise<void>;
 ```
 
@@ -64,7 +68,7 @@ function rebindChatWorldbook(chat_name: 'current', worldbook_name: string): Prom
 
 :::code-group
 
-```typescript [replaceWorldbook]
+```ts [replaceWorldbook]
 function replaceWorldbook(
   worldbook_name: string,
   worldbook: PartialDeep<WorldbookEntry>[],
@@ -72,7 +76,7 @@ function replaceWorldbook(
 ): Promise<void>;
 ```
 
-```typescript [ReplaceWorldbookOptions]
+```ts [ReplaceWorldbookOptions]
 interface ReplaceWorldbookOptions {
   render?: 'debounced' | 'immediate';
 }
@@ -89,12 +93,12 @@ interface ReplaceWorldbookOptions {
 
 #### `worldbook`
 
-- **类型**: [`PartialDeep<WorldbookEntry>[]`](./创建世界书#createworldbook)
+- **类型**: [`PartialDeep<WorldbookEntry>[]`](./获取世界书#getworldbook)
 - **描述**: 要替换的世界书内容
 
 #### `option?`
 
-一个可选的配置对象，包含以下属性：
+一个可选的配置对象, 包含以下属性:
 
 - **`render`**: `debounced|immediate`
   - 对于对世界书的更改, 世界书编辑器应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
@@ -103,7 +107,7 @@ interface ReplaceWorldbookOptions {
 
 :::code-group
 
-```typescript [禁止所有条目递归, 保持其他设置不变]
+```ts [禁止所有条目递归, 保持其他设置不变]
 const worldbook = await getWorldbook("eramgt少女歌剧");
 await replaceWorldbook(
   'eramgt少女歌剧',
@@ -114,7 +118,7 @@ await replaceWorldbook(
 );
 ```
 
-```typescript [删除所有名字中包含 "神乐光" 的条目]
+```ts [删除所有名字中包含 "神乐光" 的条目]
 const worldbook = await getWorldbook("eramgt少女歌剧");
 _.remove(worldbook, entry => entry.name.includes('神乐光'));
 await replaceWorldbook("eramgt少女歌剧", worldbook);
@@ -128,7 +132,7 @@ await replaceWorldbook("eramgt少女歌剧", worldbook);
 
 :::code-group
 
-```typescript[updateWorldbookWith]
+```ts[updateWorldbookWith]
 function updateWorldbookWith(
   worldbook_name: string,
   updater: WorldbookUpdater,
@@ -136,7 +140,7 @@ function updateWorldbookWith(
 ): Promise<WorldbookEntry[]>;
 ```
 
-```typescript[WorldbookUpdater]
+```ts[WorldbookUpdater]
 type WorldbookUpdater =
   | ((worldbook: WorldbookEntry[]) => PartialDeep<WorldbookEntry>[])
   | ((worldbook: WorldbookEntry[]) => Promise<PartialDeep<WorldbookEntry>[]>);
@@ -149,29 +153,29 @@ type WorldbookUpdater =
 #### `worldbook_name`
 
 - **类型**: `string`
-- **描述**: 世界书名称  
+- **描述**: 世界书名称
 
 #### `updater`
 
 - **类型**: [`WorldbookUpdater`](./修改世界书#updateworldbookwith)
-- **描述**: 用于更新世界书的函数。它应该接收世界书条目作为参数，并返回更新后的世界书条目。
+- **描述**: 用于更新世界书的函数. 它应该接收世界书条目作为参数, 并返回更新后的世界书条目
 
 #### `option?`
 
-一个可选的配置对象，包含以下属性：
+一个可选的配置对象, 包含以下属性:
 
 - **`render`**: `debounced|immediate`
   - 对于对世界书的更改, 世界书编辑器应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
 
 ### 返回值
 
-- **更新后的世界书条目**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
+- **更新后的世界书条目**: [`WorldbookEntry[]`](./获取世界书#getworldbook)
 
 ### 示例
 
 :::code-group
 
-```typescript [禁止所有条目递归, 保持其他设置不变]
+```ts [禁止所有条目递归, 保持其他设置不变]
 await updateWorldbookWith('eramgt少女歌剧', worldbook => {
   return worldbook.map(entry => ({
     ...entry,
@@ -180,7 +184,7 @@ await updateWorldbookWith('eramgt少女歌剧', worldbook => {
 });
 ```
 
-```typescript [删除所有名字中包含 "神乐光" 的条目]
+```ts [删除所有名字中包含 "神乐光" 的条目]
 await updateWorldbookWith('eramgt少女歌剧', worldbook => {
   _.remove(worldbook, entry => entry.name.includes('神乐光'));
   return worldbook;
@@ -193,7 +197,7 @@ await updateWorldbookWith('eramgt少女歌剧', worldbook => {
 
 向世界书 `worldbook_name` 中新增条目
 
-```typescript
+```ts
 function createWorldbookEntries(
   worldbook_name: string,
   new_entries: PartialDeep<WorldbookEntry>[],
@@ -210,26 +214,26 @@ function createWorldbookEntries(
 
 #### `new_entries`
 
-- **类型**: [`PartialDeep<WorldbookEntry>[]`](./创建世界书#createworldbook)
+- **类型**: [`PartialDeep<WorldbookEntry>[]`](./获取世界书#getworldbook)
 - **描述**: 要新增的条目
 
 #### `option?`
 
-一个可选的配置对象，包含以下属性：
+一个可选的配置对象, 包含以下属性:
 
 - **`render`**: `debounced|immediate`
   - 对于对世界书的更改, 世界书编辑器应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
 
 ### 返回值
 
-- **更新后的世界书条目**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
-- **新增的条目**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
+- **更新后的世界书条目**: [`WorldbookEntry[]`](./获取世界书#getworldbook)
+- **新增的条目**: [`WorldbookEntry[]`](./获取世界书#getworldbook)
 
 ### 示例
 
 :::code-group
 
-```typescript [创建两个条目, 一个标题叫 "神乐光", 一个留白]
+```ts [创建两个条目, 一个标题叫 "神乐光", 一个留白]
 const { worldbook, new_entries } = await createWorldbookEntries('eramgt少女歌剧', [{ name: '神乐光' }, {}]);
 ```
 
@@ -239,7 +243,7 @@ const { worldbook, new_entries } = await createWorldbookEntries('eramgt少女歌
 
 删除世界书 `worldbook_name` 中的条目
 
-```typescript
+```ts
 function deleteWorldbookEntries(
   worldbook_name: string,
   predicate: (entry: WorldbookEntry) => boolean,
@@ -256,26 +260,26 @@ function deleteWorldbookEntries(
 
 #### `predicate`
 
-- **类型**: [`(entry: WorldbookEntry) => boolean`](./创建世界书#createworldbook)
+- **类型**: [`(entry: WorldbookEntry) => boolean`](./获取世界书#getworldbook)
 - **描述**: 要删除的条目
 
 #### `option?`
 
-一个可选的配置对象，包含以下属性：
+一个可选的配置对象, 包含以下属性:
 
 - **`render`**: `debounced|immediate`
   - 对于对世界书的更改, 世界书编辑器应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
 
 ### 返回值
 
-- **更新后的世界书条目**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
-- **被删除的条目**: [`WorldbookEntry[]`](./创建世界书#createworldbook)
+- **更新后的世界书条目**: [`WorldbookEntry[]`](./获取世界书#getworldbook)
+- **被删除的条目**: [`WorldbookEntry[]`](./获取世界书#getworldbook)
 
 ### 示例
 
 :::code-group
 
-```typescript [删除所有名字中包含 "神乐光" 的条目]
+```ts [删除所有名字中包含 "神乐光" 的条目]
 const { worldbook, deleted_entries } = await deleteWorldbookEntries('eramgt少女歌剧', entry => entry.name.includes('神乐光'));
 ```
 
