--- a/src/guide/功能详情/世界书/删除世界书.md
+++ b/src/guide/功能详情/世界书/删除世界书.md
@@ -1,18 +1,22 @@
+---
+order: 3
+---
+
 # 删除世界书
 
 :::tip
 请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
 :::
 
-[点击查看对应类型定义文件（可发给AI或IDE使用，酒馆助手设置中提供了打包下载）](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/worldbook.d.ts)
+[点击查看对应类型定义文件 (可发给 AI 或 IDE 使用, 酒馆助手界面中提供了打包下载)](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/worldbook.d.ts)
 
 <CustomTOC />
 
 ## deleteWorldbook
 
-删除 `worldbook_name` 世界书。
+删除 `worldbook_name` 世界书
 
-```typescript
+```ts
 function deleteWorldbook(worldbook_name: string): Promise<boolean>;
 ```
 
