--- a/src/guide/功能详情/注入提示词.md
+++ b/src/guide/功能详情/注入提示词.md
@@ -4,26 +4,26 @@
 请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
 :::
 
-[点击查看对应类型定义文件（可发给AI或IDE使用，酒馆助手设置中提供了打包下载）](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/inject.d.ts)
+[点击查看对应类型定义文件 (可发给 AI 或 IDE 使用, 酒馆助手界面中提供了打包下载)](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/inject.d.ts)
 
 <CustomTOC />
 
 ## injectPrompts
 
-注入提示词。
+注入提示词
 
-这样注入的提示词仅在当前聊天文件中有效，
+这样注入的提示词仅在当前聊天文件中有效,
 
-- 如果需要跨聊天文件注入或在新开聊天时重新注入，你可以监听 `tavern_events.CHAT_CHANGED` 事件
-- 或者，可以监听 `tavern_events.GENERATION_AFTER_COMMANDS` 事件，在生成前注入
+- 如果需要跨聊天文件注入或在新开聊天时重新注入, 你可以监听 `tavern_events.CHAT_CHANGED` 事件
+- 或者, 可以监听 `tavern_events.GENERATION_AFTER_COMMANDS` 事件, 在生成前注入
 
 :::code-group
 
-```typescript [injectPrompts]
+```ts [injectPrompts]
 function injectPrompts(prompts: InjectionPrompt[], options?: injectPromptsOptions): void;
 ```
 
-```typescript [injectPromptsOptions]
+```ts [injectPromptsOptions]
 type injectPromptsOptions = {
   once?: boolean;
 };
@@ -46,13 +46,13 @@ type injectPromptsOptions = {
 ##### `once?`
 
 - **类型**: `boolean`
-- **描述**: 是否只在下一次请求生成中有效；默认为 false
+- **描述**: 是否只在下一次请求生成中有效; 默认为 false
 
 ## uninjectPrompts
 
-移除注入的提示词。
+移除注入的提示词
 
-```typescript
+```ts
 function uninjectPrompts(ids: string[]): void;
 ```
 
@@ -67,7 +67,7 @@ function uninjectPrompts(ids: string[]): void;
 
 ### `InjectionPrompt`
 
-```typescript
+```ts
 type InjectionPrompt = {
   id: string;
   /**
