--- a/src/guide/功能详情/获取角色卡信息.md
+++ b/src/guide/功能详情/获取角色卡信息.md
@@ -4,21 +4,21 @@
 请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
 :::
 
-[点击查看对应类型定义文件（可发给AI或IDE使用，酒馆助手设置中提供了打包下载）](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/character.d.ts)
+[点击查看对应类型定义文件 (可发给 AI 或 IDE 使用, 酒馆助手界面中提供了打包下载)](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/character.d.ts)
 
 <CustomTOC />
 
 ## getCharCardData
 
-根据角色卡的名称获取对应角色卡信息。
+根据角色卡的名称获取对应角色卡信息
 
 :::code-group
 
-```typescript [getCharData]
+```ts [getCharData]
 function getCharData(name: LiteralUnion<'current' | string>, allowAvatar: boolean = false): Promise<v1CharData | null>;
 ```
 
-```typescript [v1CharData]
+```ts [v1CharData]
 /**
  * @typedef {object} v1CharData
  * @property {string} name - 角色卡名称
@@ -33,14 +33,14 @@ function getCharData(name: LiteralUnion<'current' | string>, allowAvatar: boolea
  * @property {boolean|string} fav - 角色卡是否被收藏
  * @property {string} create_date - 角色卡创建日期
  * @property {v2CharData} data - v2角色卡数据扩展
- * // v2CharData为非标准扩展，由ST服务器添加（不是原始数据的一部分）
+ * // v2CharData 为非标准扩展, 由酒馆添加 (不是原始数据的一部分)
  * @property {string} chat - 当前聊天文件名
  * @property {string} avatar - 角色卡头像文件名
  * @property {string} json_data - 角色卡原始JSON数据
  */
 ```
 
-```typescript [v2CharData]
+```ts [v2CharData]
 /**
  * @typedef {object} v2CharData
  * @property {string} name - 角色卡名称
@@ -61,18 +61,18 @@ function getCharData(name: LiteralUnion<'current' | string>, allowAvatar: boolea
  */
 ```
 
-```typescript [v2CharDataExtensionInfos]
+```ts [v2CharDataExtensionInfos]
 /**
  * @typedef {object} v2CharDataExtensionInfos
  * @property {number} talkativeness - 角色卡发言频率
  * @property {boolean} fav - 角色卡是否被收藏
- * @property {string} world - 角色卡所在虚构世界或设定（如果适用）
+ * @property {string} world - 角色卡所在虚构世界或设定 (如果适用)
  * @property {object} depth_prompt - 用于角色卡中的角色备注深度提示词
  * @property {number} depth_prompt.depth - 角色备注提示词深度
  * @property {string} depth_prompt.prompt - 用于角色备注的实际提示词内容
- * @property {"system" | "user" | "assistant"} depth_prompt.role - 角色备注深度提示词的role（system, user, or assistant）
+ * @property {"system" | "user" | "assistant"} depth_prompt.role - 角色备注深度提示词的role (system, user, or assistant)
  * @property {RegexScriptData[]} regex_scripts - 角色卡自定义正则表达式脚本
- * // 非标准扩展，由外部工具添加
+ * // 非标准扩展, 由外部工具添加
  * @property {string} [pygmalion_id] - 由Pygmalion.chat分配给角色的唯一标识
  * @property {string} [github_repo] - 与角色关联的GitHub仓库
  * @property {string} [source_url] - 与角色关联的源URL
@@ -81,7 +81,7 @@ function getCharData(name: LiteralUnion<'current' | string>, allowAvatar: boolea
  */
 ```
 
-```typescript [RegexScriptData]
+```ts [RegexScriptData]
 /**
 * @typedef {object} RegexScriptData
 * @property {string} id - 脚本的UUID
@@ -100,7 +100,7 @@ function getCharData(name: LiteralUnion<'current' | string>, allowAvatar: boolea
 */
 ```
 
-```typescript [v2WorldInfoBook]
+```ts [v2WorldInfoBook]
 /**
  * @typedef {object} v2WorldInfoBook
  * @property {string} name - 世界书名称
@@ -108,7 +108,7 @@ function getCharData(name: LiteralUnion<'current' | string>, allowAvatar: boolea
  */
 ```
 
-```typescript [v2DataWorldInfoEntry]
+```ts [v2DataWorldInfoEntry]
 /**
  * @typedef {object} v2DataWorldInfoEntry
  * @property {string[]} keys - 条目主键
@@ -125,12 +125,12 @@ function getCharData(name: LiteralUnion<'current' | string>, allowAvatar: boolea
  */
 ```
 
-```typescript [v2DataWorldInfoEntryExtensionInfos]
+```ts [v2DataWorldInfoEntryExtensionInfos]
 /**
  * @typedef {object} v2DataWorldInfoEntryExtensionInfos
  * @property {number} position - 条目的深度位置
  * @property {boolean} exclude_recursion - 防止条目递归应用
- * @property {number} probability - 条目应用的概率（0到1之间）
+ * @property {number} probability - 条目应用的概率 (0到1之间)
  * @property {boolean} useProbability - 确定是否使用`probability`属性
  * @property {number} depth - 递归应用条目的最大级别
  * @property {number} selectiveLogic - 定义用于确定是否选择性地应用条目的逻辑
@@ -157,32 +157,32 @@ function getCharData(name: LiteralUnion<'current' | string>, allowAvatar: boolea
 #### `name?`
 
 - **类型**: `string`
-- **描述**: 角色卡的名称，如果未提供，则返回当前打开的角色卡信息
+- **描述**: 角色卡的名称, 如果未提供, 则返回当前打开的角色卡信息
 
 #### `allowAvatar?`
 
 - **类型**: `boolean`
-- **描述**: 是否将`name`视为准确的头像文件名进行查找，用于存在同名角色卡的情况；默认为 `false`
+- **描述**: 是否将`name`视为准确的头像文件名进行查找, 用于存在同名角色卡的情况; 默认为 `false`
 
 ### 返回值
 
-- **角色卡数据**: [`v1CharData | null`](#getcharcarddata) - 包含角色卡信息的对象，找不到角色卡时返回null
+- **角色卡数据**: [`v1CharData | null`](#getcharcarddata) - 包含角色卡信息的对象, 找不到角色卡时返回 `null`
 
 ### 示例
 
 :::code-group
 
-```typescript[获取当前打开的角色卡信息]
+```ts[获取当前打开的角色卡信息]
 const charData = await getCharData();
 console.log(charData);
 ```
 
-```typescript[获取指定角色卡信息]
+```ts[获取指定角色卡信息]
 const charData = await getCharData("少女歌剧");
 console.log(charData);
 ```
 
-```typescript[知晓准确头像文件名并用于查找]
+```ts[知晓准确头像文件名并用于查找]
 const charDataWithAvatar = await getCharData("少女歌剧2.png", true);
 console.log(charDataWithAvatar);
 ```
@@ -191,9 +191,9 @@ console.log(charDataWithAvatar);
 
 ## getCharAvatarPath
 
-获取角色头像的URL路径。
+获取角色头像的URL路径
 
-```typescript
+```ts
 function getCharAvatarPath(name: LiteralUnion<'current' | string>, allowAvatar: boolean = false): Promise<string | null>;
 ```
 
@@ -202,35 +202,35 @@ function getCharAvatarPath(name: LiteralUnion<'current' | string>, allowAvatar: 
 #### `name?`
 
 - **类型**: `string`
-- **描述**: 角色卡的名称，如果未提供，则返回当前打开的角色卡信息
+- **描述**: 角色卡的名称, 如果未提供, 则返回当前打开的角色卡信息
 
 #### `allowAvatar?`
 
 - **类型**: `boolean`
-- **描述**: 是否将`name`视为准确的头像文件名进行查找，用于存在同名角色卡的情况；默认为 `false`
+- **描述**: 是否将`name`视为准确的头像文件名进行查找, 用于存在同名角色卡的情况; 默认为 `false`
 
 ### 返回值
 
-- **头像路径**: `string | null` - 角色头像的URL路径信息，可直接用于`img`标签的`src`属性，找不到角色卡时返回null
+- **头像路径**: `string | null` - 角色头像的URL路径信息, 可直接用于`img`标签的`src`属性, 找不到角色卡时返回null
 
 ### 示例
 
-```typescript
+```ts
 const avatarPath = await getCharAvatarPath("少女歌剧");
 console.log(avatarPath);
 ```
 
 ## getChatHistoryBrief
 
-获取与角色的聊天历史概要信息。
+获取与角色的聊天历史概要信息
 
 :::code-group
 
-```typescript [getChatHistoryBrief]
+```ts [getChatHistoryBrief]
 function getChatHistoryBrief(name: LiteralUnion<'current' | string>, allowAvatar: boolean = false): Promise<ChatHistoryBrief[] | null>;
 ```
 
-```typescript [ChatHistoryBrief]
+```ts [ChatHistoryBrief]
 interface ChatHistoryBrief{
   chat_item: number; // 楼层总数
   file_name: string;
@@ -247,37 +247,37 @@ interface ChatHistoryBrief{
 #### `name?`
 
 - **类型**: `string`
-- **描述**: 角色卡的名称，如果未提供，则返回当前打开的角色卡信息
+- **描述**: 角色卡的名称, 如果未提供, 则返回当前打开的角色卡信息
 
 #### `allowAvatar?`
 
 - **类型**: `boolean`
-- **描述**: 是否将`name`视为准确的头像文件名进行查找，用于存在同名角色卡的情况；默认为 `false`
+- **描述**: 是否将`name`视为准确的头像文件名进行查找, 用于存在同名角色卡的情况; 默认为 `false`
 
 ### 返回值
 
-- **聊天历史概要**: `ChatHistoryBrief[] | null` - 包含聊天历史概要信息的数组，找不到角色卡或聊天历史时返回null
+- **聊天历史概要**: `ChatHistoryBrief[] | null` - 包含聊天历史概要信息的数组, 找不到角色卡或聊天历史时返回null
 
 ### 示例
 
-```typescript
+```ts
 const historyBrief = await getChatHistoryBrief("少女歌剧");
 console.log(historyBrief);
 ```
 
 ## getChatHistoryDetail
 
-根据聊天文件名，获取详细的聊天历史信息。
+根据聊天文件名, 获取详细的聊天历史信息
 
-通常是使用从 `getChatHistoryBrief` 获取的结果。
+通常是使用从 `getChatHistoryBrief` 获取的结果
 
 :::code-group
 
-```typescript [getChatHistoryDetail]
+```ts [getChatHistoryDetail]
 function getChatHistoryDetail(data: any[], isGroupChat: boolean = false): Promise<Record<string, ChatHistoryDetail[]> | null>;
 ```
 
-```typescript [ChatHistoryDetail]
+```ts [ChatHistoryDetail]
 type ChatHistoryDetail = {
   name: string;        // 发送者名称
   is_user: boolean;    // 是否用户发送的消息
@@ -301,31 +301,31 @@ type ChatHistoryDetail = {
 #### `data`
 
 - **类型**: `any[]`
-- **描述**: 聊天历史数据，通常是从 `getChatHistoryBrief` 获取的结果，也可以是其他数据，但必须包含 `file_name` 字段
+- **描述**: 聊天历史数据, 通常是从 `getChatHistoryBrief` 获取的结果, 也可以是其他数据, 但必须包含 `file_name` 字段
 
 #### `isGroupChat?`
 
 - **类型**: `boolean`
-- **描述**: 指定是否获取群聊的历史记录；默认为 `false`
+- **描述**: 指定是否获取群聊的历史记录; 默认为 `false`
 
 ### 返回值
 
-- **聊天历史详情**: [`Promise<Record<string, ChatHistoryDetail[]> | null>`](#getchathistorydetail) - 返回一个对象，其中键是聊天文件名，值是包含聊天消息的数组，找不到聊天历史时返回null
+- **聊天历史详情**: [`Promise<Record<string, ChatHistoryDetail[]> | null>`](#getchathistorydetail) - 返回一个对象, 其中键是聊天文件名, 值是包含聊天消息的数组, 找不到聊天历史时返回 `null`
 
 :::warning
-`getChatHistoryDetail` 根据 `file_name` 来获取头像名，因此不支持存在多个同名角色卡时，对聊天记录的精确获取，函数将始终返回最早创建的角色卡的聊天记录。
+`getChatHistoryDetail` 根据 `file_name` 来获取头像名, 因此不支持存在多个同名角色卡时, 对聊天记录的精确获取, 函数将始终返回最早创建的角色卡的聊天记录.
 :::
 
 ### 示例
 
 :::code-group
 
-```typescript [获取某一角色卡的聊天历史]
+```ts [获取某一角色卡的聊天历史]
 const historyBrief = await getChatHistoryBrief("少女歌剧");
 const historyDetail = await getChatHistoryDetail(historyBrief);
 ```
 
-```typescript [获取多个角色卡的聊天历史]
+```ts [获取多个角色卡的聊天历史]
 const charNames = ["少女歌剧", "舞台少女"];
 const allHistoryBriefs = [];
 
