--- a/src/guide/功能详情/触发快速回复命令.md
+++ b/src/guide/功能详情/触发快速回复命令.md
@@ -1,27 +1,28 @@
-# 触发 Slash Command
+# 触发 /STScript
 
 :::tip
 请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
 :::
 
-我们可以在嵌入的 iframe 中执行 SillyTavern 内部的 Slash 命令 (斜杠命令), 如 `/run`、`/echo` 等。
-[点击查看对应类型定义文件（可发给AI或IDE使用，酒馆助手设置中提供了打包下载）](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/slash.d.ts)
+我们可以在前端界面或脚本执行 SillyTavern 内部的 /STScript 命令, 如 `/run`、`/echo` 等.
+
+[点击查看对应类型定义文件 (可发给 AI 或 IDE 使用, 酒馆助手界面中提供了打包下载)](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/slash.d.ts)
 
 <CustomTOC />
 
-::: info 参考
-你可以在这些地方查看SillyTavern的全部 Slash（快速回复） 命令：
+:::info 参考
+你可以在这些地方查看酒馆的全部 /STScript 命令:
 
-- 在 SillyTavern 消息发送框中输入并发送`/help slash`
+- 在酒馆消息发送框中输入并发送 `/help slash`
 - 点击酒馆助手扩展界面右上角的`编写参考-酒馆命令`
 - 查看[SillyTavern 脚本命令自查手册](https://rentry.org/sillytavern-script-book)
 :::
 
 ## triggerSlash
 
-运行 Slash 命令, 注意如果命令写错了将不会有任何反馈。
+运行 /STScript 命令
 
-```typescript
+```ts
 function triggerSlash(command: string): Promise<string>;
 ```
 
@@ -29,7 +30,7 @@ function triggerSlash(command: string): Promise<string>;
 
 #### command
 
-要运行的 Slash 命令
+要运行的 /STScript 命令
 
 ### 返回值
 
@@ -39,12 +40,46 @@ function triggerSlash(command: string): Promise<string>;
 
 ::: code-group
 
-```typescript [在酒馆界面弹出提示语 hello!]
-await triggerSlash('/echo hello!');
+```ts [在酒馆界面弹出提示语 '运行成功!']
+triggerSlash('/echo severity=success 运行成功!');
+// 但更建议你直接用 toastr 弹出提示
+toastr.success('运行成功!');
 ```
 
-```typescript [获取当前聊天消息最后一条消息对应的 id]
+```ts [获取当前聊天消息最后一条消息对应的 id]
 const last_message_id = await triggerSlash('/pass {{lastMessageId}}');
+// 但更建议你用酒馆助手函数
+const last_message = getLastMessageId();
+```
+
+```ts [新增用户输入并请求生成]
+// 创建一条用户输入到消息楼层末尾
+await createChatMessages([{ role: 'user', content: '你好' }]);
+// 触发 AI 回复
+await triggerSlash('/trigger');
 ```
 
 :::
+
+## SillyTavern.executeSlashCommandsWithOptions
+
+酒馆原生的 /STScript 运行函数
+
+:::code-group
+
+```ts [executeSlashCommandsWithOptions]
+function executeSlashCommandsWithOptions(command: string, options?: any): Promise<{
+  interrupt: boolean;
+  pipe: string;
+  isBreak: boolean;
+  isAborted: boolean;
+  isQuietlyAborted: boolean;
+  abortReason: string;
+  isError: boolean;
+  errorMessage: string;
+}>;
+```
+
+:::
+
+具体内容请参考[接口访问](/guide/功能详情/接口访问.md).
