--- a/src/guide/功能详情/酒馆正则.md
+++ b/src/guide/功能详情/酒馆正则.md
@@ -4,17 +4,17 @@
 请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
 :::
 
-[点击查看对应类型定义文件（可发给AI或IDE使用，酒馆助手设置中提供了打包下载）](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/tavern_regex.d.ts)
+[点击查看对应类型定义文件 (可发给 AI 或 IDE 使用, 酒馆助手界面中提供了打包下载)](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/tavern_regex.d.ts)
 
 <CustomTOC />
 
 ## formatAsTavernRegexedString
 
-对 `text` 应用酒馆正则。
+对 `text` 应用酒馆正则
 
 :::code-group
 
-```typescript [formatAsTavernRegexedString]
+```ts [formatAsTavernRegexedString]
 function formatAsTavernRegexedString(
   text: string,
   source: 'user_input' | 'ai_output' | 'slash_command' | 'world_info' | 'reasoning',
@@ -23,7 +23,7 @@ function formatAsTavernRegexedString(
 ): string;
 ```
 
-```typescript [FormatAsTavernRegexedStringOption]
+```ts [FormatAsTavernRegexedStringOption]
 type FormatAsTavernRegexedStringOption = {
   depth?: number; // 文本所在的深度
   character_name?: string; // 角色卡名称
@@ -42,12 +42,12 @@ type FormatAsTavernRegexedStringOption = {
 #### `source`
 
 - **类型**: `'user_input' | 'ai_output' | 'slash_command' | 'world_info' | 'reasoning'`
-- **描述**: 文本来源，例如来自用户输入或 AI 输出。对应于酒馆正则的`作用范围`选项。
+- **描述**: 文本来源, 例如来自用户输入或 AI 输出. 对应于酒馆正则的`作用范围`选项
 
 #### `destination`
 
 - **类型**: `'display' | 'prompt'`
-- **描述**: 文本将作为什么而使用，例如用于显示或作为提示词。对应于酒馆正则的`仅格式显示`和`仅格式提示词`选项。
+- **描述**: 文本将作为什么而使用, 例如用于显示或作为提示词. 对应于酒馆正则的`仅格式显示`和`仅格式提示词`选项
 
 #### `option?`
 
@@ -57,12 +57,12 @@ type FormatAsTavernRegexedStringOption = {
 ##### `depth?`
 
 - **类型**: `number`
-- **描述**: 文本所在的深度；不填则不考虑酒馆正则的`深度`选项：无论该深度是否在酒馆正则的`最小深度`和`最大深度`范围内都生效
+- **描述**: 文本所在的深度; 不填则不考虑酒馆正则的`深度`选项: 无论该深度是否在酒馆正则的`最小深度`和`最大深度`范围内都生效
 
 ##### `character_name?`
 
 - **类型**: `string`
-- **描述**: 角色卡名称；不填则使用当前角色卡名称
+- **描述**: 角色卡名称; 不填则使用当前角色卡名称
 
 ### 返回值
 
@@ -72,29 +72,29 @@ type FormatAsTavernRegexedStringOption = {
 
 :::code-group
 
-```typescript [基本用法]
-// 对文本应用酒馆正则，作为 AI 输出显示
+```ts [基本用法]
+// 对文本应用酒馆正则, 作为 AI 输出显示
 const text = "Hello world!";
 const result = formatAsTavernRegexedString(text, 'ai_output', 'display');
 ```
 
-```typescript [指定深度和角色名]
-// 获取最后一楼文本，将它视为将会作为显示的 AI 输出，对它应用酒馆正则
+```ts [指定深度和角色名]
+// 获取最后一楼文本, 将它视为将会作为显示的 AI 输出, 对它应用酒馆正则
 const message = getChatMessages(-1)[0];
 const result = formatAsTavernRegexedString(
-  message.message, 
-  'ai_output', 
-  'display', 
+  message.message,
+  'ai_output',
+  'display',
   { depth: 0 }
 );
 ```
 
-```typescript [用于提示词]
+```ts [用于提示词]
 // 对用户输入应用正则后用于提示词
 const userInput = "用户的输入文本";
 const processedText = formatAsTavernRegexedString(
-  userInput, 
-  'user_input', 
+  userInput,
+  'user_input',
   'prompt'
 );
 ```
@@ -103,9 +103,9 @@ const processedText = formatAsTavernRegexedString(
 
 ## isCharacterTavernRegexesEnabled
 
-判断局部正则是否被启用。
+判断局部正则是否被启用
 
-```typescript
+```ts
 function isCharacterTavernRegexesEnabled(): Promise<boolean>;
 ```
 
@@ -114,29 +114,29 @@ function isCharacterTavernRegexesEnabled(): Promise<boolean>;
 - **局部正则是否被启用**: `boolean`
 
 :::warning
-如果你是在被写在局部正则中的全局脚本调用这个函数, **请保证"在编辑时运行"被启用**, 这样这个脚本才会无视局部正则开启情况而运行。
+如果你是在被写在局部正则中的全局脚本调用这个函数, **请保证"在编辑时运行"被启用**, 这样这个脚本才会无视局部正则开启情况而运行
 :::
 
 ## getTavernRegexes
 
-获取酒馆正则。
+获取酒馆正则
 
 :::code-group
 
-```typescript [getTavernRegexes]
+```ts [getTavernRegexes]
 function getTavernRegexes(
   option: GetTavernRegexesOption = {}
 ): TavernRegex[];
 ```
 
-```typescript [GetTavernRegexesOption]
+```ts [GetTavernRegexesOption]
 type GetTavernRegexesOption = {
   scope?: "all" | "global" | "character"; // 按所在区域筛选正则
   enable_state?: "all" | "enabled" | "disabled"; // 按是否被开启筛选正则
 }
 ```
 
-```typescript [TavernRegex]
+```ts [TavernRegex]
 type TavernRegex = {
   id: string;
   script_name: string;
@@ -171,16 +171,16 @@ type TavernRegex = {
 #### `scope?`
 
 - **类型**: `'all' | 'global' | 'character'`
-- **描述**: 按所在区域筛选酒馆正则；默认为 `'all'`
+- **描述**: 按所在区域筛选酒馆正则; 默认为 `'all'`
 
 #### `enable_state?`
 
 - **类型**: `'all' | 'enabled' | 'disabled'`
-- **描述**: 按是否被开启筛选酒馆正则；默认为 `'all'`
+- **描述**: 按是否被开启筛选酒馆正则; 默认为 `'all'`
 
 ### 返回值
 
-一个数组, 数组的元素是酒馆正则 `TavernRegex`. 该数组依据正则作用于文本的顺序排序, 也就是酒馆显示正则的地方从上到下排列。
+一个数组, 数组的元素是酒馆正则 `TavernRegex`. 该数组依据正则作用于文本的顺序排序, 也就是酒馆显示正则的地方从上到下排列
 
 - **id**: `string`
 - **script_name**: `string`
@@ -209,11 +209,11 @@ type TavernRegex = {
 
 :::code-group
 
-```typescript [获取所有正则]
+```ts [获取所有正则]
 const regexes = getTavernRegexes();
 ```
 
-```typescript [获取当前角色卡启用的局部正则]
+```ts [获取当前角色卡启用的局部正则]
 const regexes = getTavernRegexes({
   scope: "character",
   enable_state: "enabled",
@@ -224,18 +224,18 @@ const regexes = getTavernRegexes({
 
 ## replaceTavernRegexes
 
-完全替换酒馆正则。
+完全替换酒馆正则
 
 :::code-group
 
-```typescript [replaceTavernRegexes]
+```ts [replaceTavernRegexes]
 function replaceTavernRegexes(
-  regexes: TavernRegex[], 
+  regexes: TavernRegex[],
   { scope }: ReplaceTavernRegexesOption
 ): Promise<void>;
 ```
 
-```typescript [ReplaceTavernRegexesOption]
+```ts [ReplaceTavernRegexesOption]
 type ReplaceTavernRegexesOption = {
   scope?: "all" | "global" | "character"; // 要替换的酒馆正则部分
 }
@@ -253,19 +253,19 @@ type ReplaceTavernRegexesOption = {
 #### `scope?`
 
 - **类型**: `'all' | 'global' | 'character'`
-- **描述**: 要替换的酒馆正则部分；默认为 `'all'`
+- **描述**: 要替换的酒馆正则部分; 默认为 `'all'`
 
 :::warning
 
-- **这是一个很慢的操作!** 尽量对正则做完所有事后再一次性 replaceTavernRegexes。
-- **为了重新应用正则，它会重新载入整个聊天消息**，将会触发 `tavern_events.CHAT_CHANGED` 进而重新加载全局脚本和楼层消息。
-  这意味着如果你在全局脚本中运行本函数，则该函数之后的内容将不会被执行。
+- **这是一个很慢的操作!** 尽量对正则做完所有事后再一次性 replaceTavernRegexes
+- **为了重新应用正则, 它会重新载入整个聊天消息**, 将会触发 `tavern_events.CHAT_CHANGED` 进而重新加载全局脚本和楼层消息
+  这意味着如果你在全局脚本中运行本函数, 则该函数之后的内容将不会被执行
 
 :::
 
 ### 示例
 
-```typescript
+```ts
 // 开启所有名字里带 "舞台少女" 的正则
 let regexes = getTavernRegexes();
 regexes.forEach((regex) => {
@@ -278,24 +278,24 @@ await replaceTavernRegexes(regexes, {});
 
 ## updateTavernRegexesWith
 
-使用更新函数更新酒馆正则。
+使用更新函数更新酒馆正则
 
 :::code-group
 
-```typescript [updateTavernRegexesWith]
+```ts [updateTavernRegexesWith]
 function updateTavernRegexesWith(
   updater: TavernRegexUpdater,
   option: ReplaceTavernRegexesOption = {}
 ): Promise<TavernRegex[]>;
 ```
 
-```typescript [TavernRegexUpdater]
+```ts [TavernRegexUpdater]
 type TavernRegexUpdater =
   | ((regexes: TavernRegex[]) => TavernRegex[])
   | ((regexes: TavernRegex[]) => Promise<TavernRegex[]>);
 ```
 
-```typescript [ReplaceTavernRegexesOption]
+```ts [ReplaceTavernRegexesOption]
 type ReplaceTavernRegexesOption = {
   scope?: "all" | "global" | "character"; // 要替换的酒馆正则部分
 }
@@ -308,12 +308,12 @@ type ReplaceTavernRegexesOption = {
 #### `updater`
 
 - **类型**: `TavernRegexUpdater`
-- **描述**: 用于更新酒馆正则的函数。它应该接收酒馆正则作为参数，并返回更新后的酒馆正则。
+- **描述**: 用于更新酒馆正则的函数. 它应该接收酒馆正则作为参数, 并返回更新后的酒馆正则
 
 #### `scope?`
 
 - **类型**: `'all' | 'global' | 'character'`
-- **描述**: 要替换的酒馆正则部分；默认为 `'all'`
+- **描述**: 要替换的酒馆正则部分; 默认为 `'all'`
 
 ### 返回值
 
@@ -321,7 +321,7 @@ type ReplaceTavernRegexesOption = {
 
 ### 示例
 
-```typescript
+```ts
 // 更新所有名字里带 "舞台少女" 的正则
 await updateTavernRegexesWith((regexes) => {
   regexes.forEach((regex) => {
