--- a/src/guide/基本用法/变量管理器.md
+++ b/src/guide/基本用法/变量管理器.md
@@ -1,53 +1,21 @@
 ---
-order: 3
+order: 4
 ---
 
 # 变量管理器
 
-变量管理器允许用户查看、编辑并实时监听不同作用域下的变量。这对于调试脚本、理解功能运行状态以及动态调整参数都非常有帮助。
+变量管理器允许用户查看、编辑并实时监听不同作用域下的变量. 这对于调试脚本、理解功能运行状态以及动态调整参数都非常有帮助. 
 
 ![变量管理器](/变量管理器.gif)
 
-## 功能入口
+## 界面易用性
 
-变量管理器有两个快捷入口：
+- 我们翻译并调整了 [svelte-jsoneditor](https://github.com/josdejong/svelte-jsoneditor) 作为变量编辑器, 它用起来非常方便.
+- 你可以将变量管理器窗口拖动到最左边或最右边, 从而让窗口吸附在酒馆界面边缘.
+- 你通过拖动窗口边缘来修改窗口大小.
 
-- 入口1：在酒馆助手的工具箱中，点击“变量管理器”按钮
-![变量管理器入口1](/变量管理器入口1.png)
+## 快捷入口
 
-- 入口2：在酒馆发送栏的左侧，点击魔法棒图标内的“变量管理器”按钮
-![变量管理器入口2](/变量管理器入口2.png)
+你可以在酒馆输入框左侧魔棒图标内找到它的快捷入口.
 
-## UI特性
-
-- 界面浮窗将始终显示在酒馆的最上层，不会被其他窗口遮挡
-- 可自由拖动，调整位置
-- 电脑端直接拖动边缘修改窗口大小，手机端需要按住右下角修改
-
-## 主要功能
-
-变量管理器能够展示和操作以下四种类型的变量：
-
-* **全局变量 (Global Variables):**
-  * 这些变量在酒馆的整个运行期间都存在，并且对所有聊天和角色都可见。
-  * 通常用于存储一些全局配置或状态信息。
-* **角色变量 (Character Variables):**
-  * 这些变量与特定的角色卡相关联。当切换到不同的角色时，这些变量也会相应地改变。
-  * 适合存储角色特有的设置、记忆或状态。
-* **聊天变量 (Chat Variables):**
-  * 这些变量的作用域限定在当前的聊天会话中。当开始新的聊天或切换到其他聊天时，这些变量会发生变化。
-  * 可用于存储当前对话的上下文信息、临时数据等。
-* **楼层变量 (Floor Variables):**
-  * 这些变量与聊天记录中的特定"楼层"或消息条目相关联。
-  * 可以用来追踪特定消息的状态或附加信息。
-
-## 使用方法
-
-* **查看变量:**
-  * 在变量管理器面板中，会清晰地列出当前可用的上述四种类型的变量及其对应的值。
-  * 变量的值会实时更新，反映其在酒馆运行过程中的任何变化。
-* **编辑变量:**
-  * 用户可以直接在变量管理器中修改变量的值。这对于测试脚本逻辑或临时改变功能行为非常方便。
-  * 点击保存后，相关的脚本或功能会立即使用新的变量值。
-* **实时监听:**
-  * 变量管理器会自动监听变量的变化。当任何一个被管理的变量发生改变时，其在界面上显示的值会立即更新，无需手动刷新。
+![变量管理器快捷入口](/变量管理器快捷入口.png)
